--- a/rush.yaml
+++ b/rush.yaml
@@ -91384,3 +91384,109 @@ sets:
     - Ultra Rare
     - Secret Rare
 yugipedia_page_id: 934886
+---
+konami_id:
+name:
+  en: Helmet of the Master Craftsman
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>名<rt>めい</rt></ruby><ruby>匠<rt>しょう</rt></ruby>の<ruby>兜<rt>かぶと</rt></ruby>
+  ja_romaji: Meishō no Kabuto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Equip this card to 1 face-up monster on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The equipped monster gains 200 ATK/DEF. Also, if the equipped monster is "Master Craftsman Kotetsu" or a Legend monster whose original Level is 4 or lower, it gains ATK equal to [its original ATK].
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Equip
+images:
+- index: 1
+  image: HelmetoftheMasterCraftsman-RDLGP1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/LGP1-JP045
+    set_name: Legend Awakening Pack
+    rarities:
+    - Common
+yugipedia_page_id: 935229
+---
+konami_id:
+name:
+  en: Master Craftsman Kotetsu
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>名<rt>めい</rt></ruby><ruby>匠<rt>しょう</rt></ruby> <ruby>虎<rt>こ</rt></ruby><ruby>鉄<rt>てつ</rt></ruby>
+  ja_romaji: Meishō Kotetsu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Place 1 Level 4 or lower Normal Monster or 1 Equip Spell Card from your Graveyard on top of the Deck. Then, if you placed a Legend monster or "Helmet of the Master Craftsman", you can draw 1 card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Beast-Warrior / Effect
+attribute: FIRE
+level: 3
+atk: 1000
+def: 1000
+images:
+- index: 1
+  image: MasterCraftsmanKotetsu-RDLGP1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/LGP1-JP036
+    set_name: Legend Awakening Pack
+    rarities:
+    - Common
+yugipedia_page_id: 935230
