--- a/data/cards/yugipedia934983.yaml
+++ b/data/cards/yugipedia934983.yaml
@@ -31,7 +31,7 @@ series:
 - Recipe
 images:
 - index: 1
-  image: RecettedeSpecialiteChefsSpecialtyRecipe-DBWS-JP-OP.png
+  image: RecettedeSpécialitéChefsSpecialtyRecipe-DBWS-JP-OP.png
 sets:
   ja:
   - set_number: DBWS-JP040
