--- a/data/cards/75047173.yaml
+++ b/data/cards/75047173.yaml
@@ -37,6 +37,7 @@ card_type: Trap
 property: Normal
 series:
 - Contact
+- Favorite
 images:
 - index: 1
   image: FavoriteContact-POTE-EN-UR-1E.png
@@ -77,6 +78,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 862005
