--- a/data/cards/yugipedia935661.yaml
+++ b/data/cards/yugipedia935661.yaml
@@ -8,15 +8,15 @@ name:
   it:
   pt:
   ja: <ruby>Ｅ・ＨＥＲＯ<rt>エレメンタルヒーロー</rt></ruby> フレイム・ウィングマン－フレイム・シュート
-  ja_romaji: Erementaruhīrō Fureimu Winguman - Fureimu Shūto
+  ja_romaji: Erementaru Hīrō Fureimu Winguman - Fureimu Shūto
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 text:
   en: |-
-    "Elemental HERO" monsters with different Attributes
-    Must be Fusion Summoned. If this card is Special Summoned: You can add 1 "Favorite" card from your Deck or GY to your hand. You can Tribute this card if it was Fusion Summoned using a Normal Monster(s) as material; Special Summon 1 Level 7 or lower "Elemental HERO" monster that cannot be Normal Summoned/Set from your Deck or Extra Deck, ignoring its Summoning conditions. You can only use each effect of "Elemental HERO Flame Wingman - Infernal Rage" once per turn.
+    2 "Elemental HERO" monsters with different Attributes
+    Must be Fusion Summoned. If this card is Special Summoned: You can add 1 "Favorite" card from your Deck or GY to your hand. You can Tribute this card Fusion Summoned using a Normal Monster(s) as material; Special Summon 1 Level 7 or lower "Elemental HERO" monster that cannot be Normal Summoned/Set from your Deck or Extra Deck, ignoring its Summoning conditions. You can only use each effect of "Elemental HERO Flame Wingman - Infernal Rage" once per turn.
   de:
   es:
   fr:
@@ -32,10 +32,11 @@ attribute: WIND
 level: 8
 atk: 2100
 def: 1200
-materials: '"Elemental HERO" monsters with different Attributes'
+materials: 2 "Elemental HERO" monsters with different Attributes
 series:
 - Elemental HERO
 - HERO
+- Signature move
 - Wingman
 images:
 - index: 1
@@ -48,5 +49,5 @@ sets:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Unlimited
+  ocg: Not yet released
 yugipedia_page_id: 935661
