--- a/data/cards/yugipedia935662.yaml
+++ b/data/cards/yugipedia935662.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Level 4 or lower Cyberse monster
-    If this card is sent to the GY as a Link Material for a Cyberse Link Monster with 2300 or more original ATK: You can Special Summon this card, but banish it if it leaves the field. You can only use this effect of "Link Decoder" once per turn.
+    If this card is sent to the GY as Link Material for a Cyberse monster with 2300 or more original ATK: You can Special Summon this card, but banish it when it leaves the field. You can only use this effect of "Link Decoder" once per turn.
   de:
   es:
   fr:
@@ -44,5 +44,5 @@ sets:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Unlimited
+  ocg: Not yet released
 yugipedia_page_id: 935662
