--- a/data/cards/96305350.yaml
+++ b/data/cards/96305350.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18457
 password: 96305350
 name:
   en: Gold Pride - Captain Carrie
@@ -73,6 +73,6 @@ sets:
     - Ultra Rare
     - Starlight Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 931065
