--- a/data/cards/21677871.yaml
+++ b/data/cards/21677871.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18461
 password: 21677871
 name:
   en: Gold Pride - Start Your Engines!
@@ -64,6 +64,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 931069
