--- a/data/cards/22390469.yaml
+++ b/data/cards/22390469.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18458
 password: 22390469
 name:
   en: Gold Pride - Star Leon
@@ -75,6 +75,6 @@ sets:
     rarities:
     - Ultra Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 931070
