--- a/data/cards/58884063.yaml
+++ b/data/cards/58884063.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18459
 password: 58884063
 name:
   en: Gold Pride - Nytro Blaster
@@ -76,6 +76,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 931067
