--- a/data/cards/59900655.yaml
+++ b/data/cards/59900655.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18456
 password: 59900655
 name:
   en: Gold Pride - Nytro Head
@@ -68,6 +68,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 931066
