--- a/data/cards/60622305.yaml
+++ b/data/cards/60622305.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18453
 password: 60622305
 name:
   en: Xyz Align
@@ -64,6 +64,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 931246
