--- a/data/cards/61845881.yaml
+++ b/data/cards/61845881.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18450
 password: 61845881
 name:
   en: Minairuka
@@ -66,6 +66,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 931244
