--- a/data/cards/95283172.yaml
+++ b/data/cards/95283172.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18460
 password: 95283172
 name:
   en: Gold Pride - The Crowd Goes Wild!
@@ -76,6 +76,6 @@ sets:
     rarities:
     - Secret Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 931068
