--- a/data/cards/97240499.yaml
+++ b/data/cards/97240499.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18451
 password: 97240499
 name:
   en: Orphebull the Harmonious Bullfighter Bard
@@ -66,6 +66,6 @@ sets:
     rarities:
     - Ultra Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 931248
