--- a/data/cards/80727721.yaml
+++ b/data/cards/80727721.yaml
@@ -19,7 +19,7 @@ text:
   de: |-
     Du kannst diese Karte als Tribut anbieten, um 1 „Jurassier“-Monster der Stufe 4 oder niedriger in deinem Friedhof zu wählen, außer „Jurassier-Aeolo“. Beschwöre das Monster als Spezialbeschwörung vom Friedhof.
   es: |-
-    Puedes Sacrificar esta carta y selecciona un monstruo "Jurrac" nivel 4 o menor dn tu Cementerio, excepto "Jurrac Aeolo". Invoca a ese monstruo de Modo Especial desde el Cementerio.
+    Puedes Sacrificar esta carta y selecciona un monstruo "Jurrac" de Nivel 4 o menor en tu Cementerio, excepto "Jurrac Aeolo". Invoca a ese monstruo de Modo Especial desde el Cementerio.
   fr: |-
     Vous pouvez Sacrifier cette carte pour sélectionner 1 monstre "Préhistorique" de Niveau 4 ou moins dans votre Cimetière, excepté "Aeolo Préhistorique". Invoquez Spécialement ce monstre depuis le Cimetière.
   it: |-
