--- a/data/cards/00572850.yaml
+++ b/data/cards/00572850.yaml
@@ -96,5 +96,5 @@ sets:
     - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Unlimited
+  ocg: Limited
 yugipedia_page_id: 870970
