--- a/data/cards/63288573.yaml
+++ b/data/cards/63288573.yaml
@@ -248,5 +248,5 @@ sets:
     - Premium Gold Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Limited
+  ocg: Semi-Limited
 yugipedia_page_id: 552505
