--- a/data/cards/12580477.yaml
+++ b/data/cards/12580477.yaml
@@ -371,5 +371,5 @@ sets:
     - Extra Secret Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Unlimited
+  ocg: Semi-Limited
 yugipedia_page_id: 268
