--- a/data/cards/68304193.yaml
+++ b/data/cards/68304193.yaml
@@ -99,5 +99,5 @@ sets:
     - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Unlimited
+  ocg: Limited
 yugipedia_page_id: 884055
