--- a/data/cards/92731385.yaml
+++ b/data/cards/92731385.yaml
@@ -106,5 +106,5 @@ sets:
     - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Unlimited
+  ocg: Forbidden
 yugipedia_page_id: 870967
