--- a/src/assignments/assignments.yaml
+++ b/src/assignments/assignments.yaml
@@ -33,4 +33,9 @@
 # Saincred Magician
 - yugipedia: 930451
   fake_password: 100200230
-  
+# Elemental HERO Flame Wingman - Infernal Rage
+- yugipedia: 935661
+  fake_password: 100418001
+# Link Decoder
+- yugipedia: 935662
+  fake_password: 100418002
