--- a/src/assignments/assignments.yaml
+++ b/src/assignments/assignments.yaml
@@ -22,6 +22,20 @@
 - yugipedia: 371832
   fake_password: 10000090
 ## Prereleases
+# Deck Build Pack: Wild Survivors
+- set_abbreviation: DBWS
+  fake_password_range:
+    - 100430000
+# Duelist Nexus
+- set_abbreviation: DUNE
+  fake_password_range:
+    - 101201000
 # Saincred Magician
 - yugipedia: 930451
   fake_password: 100200230
+# Elemental HERO Flame Wingman - Infernal Rage
+- yugipedia: 935661
+  fake_password: 100418001
+# Link Decoder
+- yugipedia: 935662
+  fake_password: 100418002
