--- a/data/cards/02830693.yaml
+++ b/data/cards/02830693.yaml
@@ -44,7 +44,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 상대 몬스터의 공격 선언시에, 그 공격 몬스터 1장을 대상으로 하고 발동할 수 있다. 이 카드를 패에서 장착 카드로 취급하여 그 몬스터에 장착한다. 장착 몬스터는 공격할 수 없다. ②: 이 카드가 묘지에 존재할 경우, 상대 몬스터의 직접 공격 선언시에 발동할 수 있다. 이 카드를 특수 소환한다. 이 효과로 특수 소환한 이 카드는, 필드에서 벗어났을 경우에 제외된다.
   zh-TW:
   zh-CN: |-
-    「彩虹栗子球」的①②的效果1回合各能使用1次。①：对方怪兽的攻击宣言时，以那1只攻击怪兽为对象才能发动。这张卡从手卡当作装备卡使用给那只怪兽装备。装备怪兽不能攻击。②：这张卡在墓地存在的场合，对方怪兽的直接攻击宣言时才能发动。这张卡从墓地特殊召唤。这个效果特殊召唤的这张卡从场上离开的场合除外。
+    此卡名的①②效果１回合仅可各使用１次。①：对手怪兽攻击宣言时，以该１只攻击怪兽为对象可以发动。将此卡视为装备卡，从手牌装备于该怪兽。装备怪兽不可攻击。②：此卡存在于墓地的情况下，对手怪兽的直接攻击宣言时可以发动。将此卡特殊召唤。以此效果特殊召唤的此卡离开场上的情况下，将其除外。
 card_type: Monster
 monster_type_line: Fiend / Effect
 attribute: LIGHT
@@ -172,6 +172,7 @@ sets:
   - set_number: SD42-SC020
     set_name: 'Structure Deck: Overlay Universe'
     rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
