--- a/data/cards/01688285.yaml
+++ b/data/cards/01688285.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 4 monsters
-    While this card has material, it is unaffected by Trap effects and by activated effects from any other monster with the same Type as any of those materials. You can only use each of the following effects of "Traptrix Pinguicula" once per turn. You can detach 1 material from this card; add 1 "Traptrix" monster from your Deck to your hand. If a monster(s) that is owned by your opponent is sent to the GY, or banished, by card effect (except during the Damage Step): You can attach 1 of them to this card as material.
+    While this card has material, it is unaffected by Trap effects and the activated effects of other monsters with the same Type as this card's material. You can only use each of the following effects of "Traptrix Pinguicula" once per turn. You can detach 1 material from this card; add 1 "Traptrix" monster from your Deck to your hand. If a monster(s) owned by your opponent is sent to the GY, or banished, by a card effect (except during the Damage Step): You can attach 1 of those monsters to this card as material.
   de:
   es:
   fr:
@@ -41,6 +41,31 @@ images:
 - index: 1
   image: TraptrixPinguicula-SD45-JP-UR.png
 sets:
+  en:
+  - set_number: SDBT-EN042
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: SDBT-DE042
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: SDBT-FR042
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: SDBT-IT042
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: SDBT-PT042
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: SD45-JPP01
     set_name: 'Structure Deck: Forest of the Traptrix Banquet Invitation Pack'
