--- a/data/cards/03078576.yaml
+++ b/data/cards/03078576.yaml
@@ -159,6 +159,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Limited
+  tcg: Unlimited
   ocg: Semi-Limited
 yugipedia_page_id: 332
