--- a/data/cards/14532163.yaml
+++ b/data/cards/14532163.yaml
@@ -174,6 +174,15 @@ sets:
     set_name: "Structure Deck: Cyber Style's Successor"
     rarities:
     - Common
+  - set_number: RC04-JP062
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: IGAS-KR067
     set_name: Ignition Assault
