--- a/data/cards/37961969.yaml
+++ b/data/cards/37961969.yaml
@@ -101,6 +101,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Unlimited
+  tcg: Limited
   ocg: Semi-Limited
 yugipedia_page_id: 870969
