--- a/data/cards/49027020.yaml
+++ b/data/cards/49027020.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Unaffected by the effects of "Hole" Normal Traps. You can only use each of the following effects of "Traptrix Pudica" once per turn. When this card is Normal Summoned: You can add 1 "Traptrip Garden" from your Deck to your hand. If this card is Special Summoned: You can target 1 opponent's Special Summoned monster; banish it, also, during the next Standby Phase, your opponent can Special Summon 1 of their banished monsters.
+    Unaffected by the effects of "Hole" Normal Traps. You can only use each of the following effects of "Traptrix Pudica" once per turn. When this card is Normal Summoned: You can add 1 "Traptrip Garden" from your Deck to your hand. If this card is Special Summoned: You can target 1 Special Summoned monster your opponent controls; banish it, also during the next Standby Phase, your opponent can Special Summon 1 of their banished monsters.
   de:
   es:
   fr:
@@ -39,6 +39,31 @@ images:
 - index: 1
   image: TraptrixPudica-SD45-JP-SR.png
 sets:
+  en:
+  - set_number: SDBT-EN001
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: SDBT-DE001
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: SDBT-FR001
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: SDBT-IT001
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: SDBT-PT001
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: SD45-JP001
     set_name: 'Structure Deck: Forest of the Traptrix'
