--- a/data/cards/95134948.yaml
+++ b/data/cards/95134948.yaml
@@ -12,7 +12,7 @@ name:
   ko: No.99 유토피아 드래그너
   ko_rr: Neombeojeu Gusipgu Yutopia Deuraegeuneo
   zh-TW:
-  zh-CN: No.99 希望皇 霍普德拉格纳
+  zh-CN: 编号99 希望皇霍普德拉古纳
 text:
   en: |-
     3+ Level 12 monsters
@@ -41,7 +41,7 @@ text:
   zh-TW:
   zh-CN: |-
     等级12怪兽×3只以上
-    这个卡名的①②效果1回合各能使用1次。①：自己或对手的回合，可以将这张卡的2个多维素材取除发动。从额外卡组将「No.1」～「No.100」之中的任意1只「No.」怪兽当作多维召唤地特殊召唤。这个效果发动的回合，自己从额外卡组特殊召唤的只能是多维怪兽，这张卡以外的自己的怪兽不能直接攻击。②：对手怪兽的攻击宣言时可以发动。那只对手怪兽的攻击力变为0。
+    此卡名的①②效果1回合仅可各使用1次。①：在自己·对手回合中，去除此卡的2个超量素材可以发动。将“编号1”～“编号100”中的任意1只“编号”怪兽视为超量召唤从额外牌组特殊召唤。发动此效果的回合中，自己从额外牌组仅可特殊召唤超量怪兽，此卡以外的自己的怪兽不可直接攻击。②：对手怪兽攻击宣言时可以发动。将该对手怪兽的攻击力改成0。
 card_type: Monster
 monster_type_line: Warrior / Xyz / Effect
 attribute: LIGHT
@@ -94,6 +94,11 @@ sets:
     set_name: "Structure Deck: Overlay Universe Emperor's Door Pack"
     rarities:
     - Ultra Rare
+    - Secret Rare
+  zh-CN:
+  - set_number: SD42-SCP01
+    set_name: "Structure Deck: Overlay Universe Emperor's Door Pack"
+    rarities:
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
