--- a/data/cards/00572850.yaml
+++ b/data/cards/00572850.yaml
@@ -95,6 +95,6 @@ sets:
     - Super Rare
     - Prismatic Secret Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Limited
   ocg: Limited
 yugipedia_page_id: 870970
