--- a/data/cards/12801833.yaml
+++ b/data/cards/12801833.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    During your Main Phase, you can Normal Summon 1 "Traptrix" monster in addition to your Normal Summon/Set. (You can only gain this effect once per turn.) The first time each of your Insect and Plant monsters would be destroyed by battle each turn, they are not destroyed. You can banish 1 monster you control; Special Summon 1 "Traptrix" monster from your hand or GY. You can only use this effect of "Traptrip Garden" once per turn.
+    During your Main Phase, you can Normal Summon 1 "Traptrix" monster, in addition to your Normal Summon/Set. (You can only gain this effect once per turn.) The first time each Insect or Plant monster you control would be destroyed by battle each turn, it is not destroyed. You can banish 1 monster you control; Special Summon 1 "Traptrix" monster from your hand or GY. You can only use this effect of "Traptrip Garden" once per turn.
   de:
   es:
   fr:
@@ -32,6 +32,31 @@ images:
 - index: 1
   image: TraptripGarden-SD45-JP-SR.png
 sets:
+  en:
+  - set_number: SDBT-EN023
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: SDBT-DE023
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: SDBT-FR023
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: SDBT-IT023
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: SDBT-PT023
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: SD45-JP023
     set_name: 'Structure Deck: Forest of the Traptrix'
