--- a/data/cards/12948099.yaml
+++ b/data/cards/12948099.yaml
@@ -12,7 +12,7 @@ name:
   ko: 고신 크투그아
   ko_rr:
   zh-TW:
-  zh-CN: 古神 克图格亚
+  zh-CN: 古神克图格亚
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
@@ -46,9 +46,8 @@ text:
     ① : 이 카드가 싱크로 소환에 성공했을 경우에 발동할 수 있다. 필드의 랭크 4의 엑시즈 몬스터를 전부 주인의 엑스트라 덱으로 되돌린다. ② : 이 카드를 소재로 한 융합 소환에 성공했을 경우에 발동한다. 자신은 덱에서 1장 드로우한다. ③ : 필드의 이 카드를 소재로서 엑시즈 소환한 몬스터는 이하의 효과를 얻는다. ● 이 엑시즈 소환에 성공했을 경우에 발동한다. 자신은 덱에서 1장 드로우 한다.
   zh-TW:
   zh-CN: |-
-    调整＋调整以外的怪兽1只以上
-    ①：这张卡同调召唤成功的场合才能发动。场上的4阶的XYZ怪兽全部回到持有者的额外卡组。②：这张卡为素材的融合召唤成功的场合发动。自己从卡组抽1张。③：场上的这张卡为素材作XYZ召唤的怪兽得到以下效果。
-    ●这次XYZ召唤成功的场合发动。自己从卡组抽1张。
+    协调＋1只以上协调以外的怪兽
+    ①：此卡同步召唤成功的情况下可以发动。将场上的阶级4超量怪兽全部放回持有者的额外牌组。②：以此卡为素材的融合召唤成功的情况下发动。自己从牌组抽1张。③：以场上的此卡为素材超量召唤的怪兽获得以下效果。●此超量召唤成功的情况下发动。自己从牌组抽1张。
 card_type: Monster
 monster_type_line: Pyro / Synchro / Effect
 attribute: FIRE
@@ -102,6 +101,11 @@ sets:
     set_name: Advanced Event Pack 2017 Vol.1
     rarities:
     - Secret Rare
+  zh-CN:
+  - set_number: SCTP-SC156
+    set_name: Entry Pack Volume 10
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
