--- a/data/cards/19221310.yaml
+++ b/data/cards/19221310.yaml
@@ -12,7 +12,7 @@ name:
   ko: 오드아이즈 세이버 드래곤
   ko_rr: Odeu-aijeu Seibeo Deuraegon
   zh-TW:
-  zh-CN: 异色眼剑甲龙
+  zh-CN: 异色眼军刀龙
 text:
   en: |-
     If this card is in your hand: You can Tribute 1 LIGHT monster; send 1 "Odd-Eyes Dragon" from your hand, Deck, or your side of the field to the Graveyard, and if you do, Special Summon this card. When this card destroys a monster by battle and sends it to the Graveyard: You can destroy 1 monster your opponent controls.
@@ -32,7 +32,7 @@ text:
     ①: 이 카드가 패에 있을 경우, 자신 필드의 빛 속성 몬스터 1장을 릴리스하고 발동할 수 있다. 패 / 덱 및 자신 필드의 앞면 표시 몬스터 중에서, "오드아이즈 드래곤" 1장을 골라 묘지로 보내고, 이 카드를 특수 소환한다. ②: 이 카드가 전투로 몬스터를 파괴하고 묘지로 보냈을 때에 발동할 수 있다. 상대 필드의 몬스터 1장을 골라 파괴한다.
   zh-TW:
   zh-CN: |-
-    -剑士名：①：这张卡在手卡的场合，自己主要阶段把自己场上1只光属性怪兽解放才能发动。从自己的手卡·卡组·场上把1只「异色眼龙」送去墓地，这张卡从手卡特殊召唤。②：这张卡战斗破坏怪兽送去墓地时才能发动。选对方场上1只怪兽破坏。
+    ①：在此卡存在于手牌中的情况下，解放自己场上的1只光属性怪兽可以发动。从手牌·牌组及自己场上的表侧表示怪兽中，挑选1只“异色眼龙”送至墓地，将此卡特殊召唤。②：此卡战斗破坏怪兽并将其送至墓地时可以发动。挑选对手场上的1只怪兽破坏。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: LIGHT
@@ -94,6 +94,11 @@ sets:
     set_name: Chronicle Binder
     rarities:
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: SCTP-SC153
+    set_name: Entry Pack Volume 10
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
