--- a/data/cards/23434538.yaml
+++ b/data/cards/23434538.yaml
@@ -210,6 +210,15 @@ sets:
     set_name: 'Structure Deck: Forest of the Traptrix'
     rarities:
     - Common
+  - set_number: RC04-JP005
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: EXP4-KR037
     set_name: Extra Pack Volume 4
