--- a/data/cards/25311006.yaml
+++ b/data/cards/25311006.yaml
@@ -157,6 +157,15 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  - set_number: RC04-JP064
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: ROTD-KR062
     set_name: Rise of the Duelist
