--- a/data/cards/25926710.yaml
+++ b/data/cards/25926710.yaml
@@ -83,6 +83,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Limited
   ocg: Unlimited
 yugipedia_page_id: 878992
