--- a/data/cards/27381364.yaml
+++ b/data/cards/27381364.yaml
@@ -106,6 +106,6 @@ sets:
     - Super Rare
     - Prismatic Secret Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Unlimited
 yugipedia_page_id: 869129
