--- a/data/cards/31437713.yaml
+++ b/data/cards/31437713.yaml
@@ -12,7 +12,7 @@ name:
   ko: No.82 하트랜드라코
   ko_rr:
   zh-TW:
-  zh-CN: No.82 心园小龙
+  zh-CN: 编号82 心园小龙
 text:
   en: |-
     2 Level 4 monsters
@@ -40,7 +40,8 @@ text:
     자신 필드 위에 마법 카드가 앞면 표시로 존재하는 한, 상대는 이 카드를 공격 대상으로 할 수 없다. 또한, 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 이 턴, 이 카드 이외의 몬스터는 공격할 수 없고, 이 카드는 상대 플레이어에게 직접 공격 할 수 있다.
   zh-TW:
   zh-CN: |-
-    4星怪兽×2。只要自己场上有魔法卡表侧表示存在，对方不能把这张卡作为攻击对象。此外，1回合1次，把这张卡1个XYZ素材取除才能发动。这个回合，这张卡以外的怪兽不能攻击，这张卡可以直接攻击对方玩家。
+    等级4怪兽×2
+    ①：只要自己场上有魔法卡以表侧表示存在，对手不可将此卡选择为攻击对象。②：1回合1次，去除此卡的1个超量素材可以发动。此回合，自己的其他怪兽不可攻击，此卡可以直接攻击。
 card_type: Monster
 monster_type_line: Dragon / Xyz / Effect
 attribute: EARTH
@@ -103,6 +104,11 @@ sets:
     set_name: Premium Pack Vol.9
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: SCTP-SC157
+    set_name: Entry Pack Volume 10
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
