--- a/data/cards/33833230.yaml
+++ b/data/cards/33833230.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>EM<rt>엔터메이트</rt></ruby> 씰 일
   ko_rr:
   zh-TW:
-  zh-CN: 娱乐伙伴 贴纸海豹鳗
+  zh-CN: 娱乐伙伴 封条鳗
 text:
   en: |-
     When this card is Normal or Special Summoned: You can target 1 Set Spell/Trap Card your opponent controls; that Set card cannot be activated this turn. Neither player can activate cards or effects in response to this effect's activation.
@@ -32,7 +32,7 @@ text:
     ①: 이 카드가 일반 소환 / 특수 소환에 성공했을 때, 상대 필드에 세트된 마법 / 함정 카드 1장을 대상으로 하고 발동할 수 있다. 이 턴에, 그 카드는 발동할 수 없다. 이 효과의 발동에 대하여, 양쪽의 플레이어는 마법 / 함정 / 몬스터의 효과를 발동할 수 없다.
   zh-TW:
   zh-CN: |-
-    ①：这张卡召唤·特殊召唤成功时，以对方场上盖放的1张魔法·陷阱卡为对象才能发动。这个回合，那张卡不能发动。双方不能对应这个效果的发动把魔法·陷阱·怪兽的效果发动。
+    ①：此卡召唤·特殊召唤成功时，以对手场上被放置的1张魔法·陷阱卡为对象可以发动。此回合该卡不可发动。应对此效果的发动，双方不可发动魔法·陷阱·怪兽的效果。
 card_type: Monster
 monster_type_line: Fish / Pendulum / Effect
 attribute: WATER
@@ -59,7 +59,7 @@ pendulum_effect:
     ①: 1턴에 1번, 상대 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 효과를 턴 종료시까지 무효로 한다.
   zh-TW:
   zh-CN: |-
-    ①：1回合1次，以对方场上1只表侧表示怪兽为对象才能发动。那只怪兽的效果直到回合结束时无效。
+    ①：1回合1次，以对手场上的1只表侧表示怪兽为对象可以发动。将该怪兽的效果直至回合结束时为止无效。
 series:
 - Performapal
 images:
@@ -119,6 +119,11 @@ sets:
   ko:
   - set_number: INOV-KR004
     set_name: 'Invasion: Vengeance'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: SCTP-SC154
+    set_name: Entry Pack Volume 10
     rarities:
     - Common
 limit_regulation:
