--- a/data/cards/48805472.yaml
+++ b/data/cards/48805472.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Discard 1 Level 4 Insect or Plant monster, or 1 Normal Trap; draw 2 cards. You can banish this card from your GY, then target 1 of your banished Level 4 Insect or Plant monsters, or 1 of your banished Normal Traps; place it on the bottom of the Deck. You can only use each effect of "Traptantalizing Tune" once per turn.
+    Discard 1 Level 4 Insect or Plant monster, or 1 Normal Trap; draw 2 cards. You can banish this card from your GY, then target 1 of your banished Level 4 Insect or Plant monsters, or Normal Traps; place it on the bottom of the Deck. You can only use each effect of "Traptantalizing Tune" once per turn.
   de:
   es:
   fr:
@@ -32,6 +32,31 @@ images:
 - index: 1
   image: TraptantalizingTune-SD45-JP-SR.png
 sets:
+  en:
+  - set_number: SDBT-EN024
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: SDBT-DE024
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: SDBT-FR024
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: SDBT-IT024
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: SDBT-PT024
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: SD45-JP024
     set_name: 'Structure Deck: Forest of the Traptrix'
