--- a/data/cards/60743819.yaml
+++ b/data/cards/60743819.yaml
@@ -12,7 +12,7 @@ name:
   ko: 악마의 통곡
   ko_rr: Akma-ui Tonggok
   zh-TW:
-  zh-CN: 恶魔的叹息
+  zh-CN: 魔鬼的叹息
 text:
   en: |-
     Target 1 monster in your opponent's GY; shuffle it into the Deck, then you can send 1 Fiend monster from your Deck to the GY.
@@ -32,7 +32,7 @@ text:
     ①: 상대 묘지의 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 상대의 덱으로 되돌린다. 그 후, 자신의 덱에서 악마족 몬스터 1장을 묘지로 보낼 수 있다.
   zh-TW:
   zh-CN: |-
-    非恶魔：①：以对方墓地1只怪兽为对象才能发动。那只怪兽回到对方卡组。那之后，可以从自己卡组把1只恶魔族怪兽送去墓地。
+    ①：以对手墓地的1只怪兽为对象可以发动。将该怪兽放回对手的牌组。然后，可从自己的牌组将1只恶魔族怪兽送至墓地。
 card_type: Trap
 property: Normal
 images:
@@ -122,6 +122,11 @@ sets:
     set_name: Advanced Event Pack 2019 Vol.2
     rarities:
     - Secret Rare
+  zh-CN:
+  - set_number: SCTP-SC163
+    set_name: Entry Pack Volume 10
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
