--- a/data/cards/63542003.yaml
+++ b/data/cards/63542003.yaml
@@ -83,6 +83,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Limited
   ocg: Limited
 yugipedia_page_id: 870246
