--- a/data/cards/72291078.yaml
+++ b/data/cards/72291078.yaml
@@ -119,6 +119,6 @@ sets:
     rarities:
     - Secret Rare
 limit_regulation:
-  tcg: Limited
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 281873
