--- a/data/cards/72714461.yaml
+++ b/data/cards/72714461.yaml
@@ -12,7 +12,7 @@ name:
   ko: 혜안의 마술사
   ko_rr:
   zh-TW:
-  zh-CN: 慧眼之魔术师
+  zh-CN: 慧眼的魔术师
 text:
   en: |-
     You can discard this card, then target 1 card in your Pendulum Zone, whose current Pendulum Scale is different from its original Pendulum Scale; its Pendulum Scale becomes its original Pendulum Scale until the end of this turn.
@@ -32,7 +32,7 @@ text:
     ①: 이 카드를 패에서 버리고, 자신의 펜듈럼 존의 펜듈럼 스케일이 원래의 수치와 다른 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드의 펜듈럼 스케일은 턴 종료시까지 원래의 수치가 된다.
   zh-TW:
   zh-CN: |-
-    ①：把这张卡从手卡丢弃，以自己的灵摆区域1张灵摆刻度和原本数值不同的卡为对象才能发动。那张卡的灵摆刻度直到回合结束时变成原本数值。
+    ①：从手牌将此卡舍弃，以自己灵摆区域1张灵摆刻度与原本数值不同的卡为对象可以发动。该卡的灵摆刻度直至回合结束时为止变为原本的数值。
 card_type: Monster
 monster_type_line: Spellcaster / Pendulum / Effect
 attribute: LIGHT
@@ -59,7 +59,7 @@ pendulum_effect:
     ①: 다른 한쪽 자신의 펜듈럼 존에 "마술사" 카드 또는 "EM(엔터메이트)" 카드가 존재할 경우에 발동할 수 있다. 이 카드를 파괴하고, 덱에서 "혜안의 마술사" 이외의 "마술사" 펜듈럼 몬스터 1장을 골라, 자신의 펜듈럼 존에 놓는다.
   zh-TW:
   zh-CN: |-
-    ①：另一边的自己的灵摆区域有「魔術師」卡或者「EM」卡存在的场合才能发动。这张卡破坏，从卡组选「慧眼の魔術師」以外的1只「魔術師」灵摆怪兽在自己的灵摆区域放置。
+    ①：另一方自己的灵摆区域有“魔术师”卡或“娱乐伙伴”卡存在的情况下可以发动。破坏此卡，从牌组挑选“慧眼的魔术师”以外的1只“魔术师”灵摆怪兽，放在自己的灵摆区域。
 series:
 - Magician
 images:
@@ -152,6 +152,11 @@ sets:
     - Ultra Rare
   - set_number: SD31-KR014
     set_name: 'Structure Deck: Pendulum Evolution'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: SD29-SC010
+    set_name: 'Structure Deck: Master of Pendulum'
     rarities:
     - Common
 limit_regulation:
