--- a/data/cards/73356503.yaml
+++ b/data/cards/73356503.yaml
@@ -109,6 +109,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 12846
