--- a/data/cards/74078255.yaml
+++ b/data/cards/74078255.yaml
@@ -101,6 +101,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Unlimited
+  tcg: Limited
   ocg: Unlimited
 yugipedia_page_id: 870966
