--- a/data/cards/74577599.yaml
+++ b/data/cards/74577599.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Special Summon this card in Defense Position as a Normal Monster (Plant/EARTH/Level 4/ATK 400/DEF 2400). (This card is NOT treated as a Trap.) You can banish this card from your GY, then target 1 "Traptrix" monster in your GY; Special Summon it. You can only use 1 "Traptrix Holeutea" effect per turn, and only once that turn. You can activate this card the turn it was Set by discarding 1 Normal Trap.
+    You can activate this card the turn it was Set, by discarding 1 Normal Trap. Special Summon this card in Defense Position as a Normal Monster (Plant/EARTH/Level 4/ATK 400/DEF 2400). (This card is NOT treated as a Trap.) You can banish this card from your GY, then target 1 "Traptrix" monster in your GY; Special Summon it. You can only use 1 "Traptrix Holeutea" effect per turn, and only once that turn.
   de:
   es:
   fr:
@@ -35,6 +35,31 @@ images:
 - index: 1
   image: TraptrixHoleutea-SD45-JP-SR.png
 sets:
+  en:
+  - set_number: SDBT-EN046
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Super Rare
+  de:
+  - set_number: SDBT-DE046
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: SDBT-FR046
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Super Rare
+  it:
+  - set_number: SDBT-IT046
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: SDBT-PT046
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Super Rare
   ja:
   - set_number: SD45-JPP05
     set_name: 'Structure Deck: Forest of the Traptrix Banquet Invitation Pack'
