--- a/data/cards/75416738.yaml
+++ b/data/cards/75416738.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    During the Main Phase, if you control a "Traptrix" monster (Quick Effect): You can Special Summon this card from your hand, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Insect and Plant monsters. You can only use this effect of "Traptrix Arachnocampa" once per turn. Unaffected by the effects of "Hole" Normal Traps. The first time each Set card in your Spell & Trap Zone would be destroyed by card effect each turn, it is not destroyed.
+    Unaffected by the effects of "Hole" Normal Traps. The first time each Set card in your Spell & Trap Zone would be destroyed by card effect each turn, it is not destroyed. During the Main Phase, if you control a "Traptrix" monster (Quick Effect): You can Special Summon this card from your hand, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Insect or Plant monsters. You can only use this effect of "Traptrix Arachnocampa" once per turn.
   de:
   es:
   fr:
@@ -38,6 +38,31 @@ images:
 - index: 1
   image: TraptrixArachnocampa-SD45-JP-SR.png
 sets:
+  en:
+  - set_number: SDBT-EN002
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Super Rare
+  de:
+  - set_number: SDBT-DE002
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: SDBT-FR002
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Super Rare
+  it:
+  - set_number: SDBT-IT002
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: SDBT-PT002
+    set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Super Rare
   ja:
   - set_number: SD45-JP002
     set_name: 'Structure Deck: Forest of the Traptrix'
