--- a/data/cards/88757791.yaml
+++ b/data/cards/88757791.yaml
@@ -12,7 +12,7 @@ name:
   ko: 법안의 마술사
   ko_rr:
   zh-TW:
-  zh-CN: 法眼之魔术师
+  zh-CN: 法眼的魔术师
 text:
   en: |-
     While this Pendulum Summoned card is on the field, "Magician" Pendulum Monsters you control cannot be destroyed by your opponent's card effects during the turn this card was Pendulum Summoned.
@@ -32,7 +32,7 @@ text:
     ①: 이 턴에 펜듈럼 소환한 이 카드가 몬스터 존에 존재하는 한, 자신 필드의 "마술사" 펜듈럼 몬스터는 상대의 효과로는 파괴되지 않는다.
   zh-TW:
   zh-CN: |-
-    ①：只要这个回合灵摆召唤的这张卡在怪兽区域存在，自己场上的「魔术师」灵摆怪兽不会被对方的效果破坏。
+    ①：从手牌将此卡舍弃，以自己灵摆区域1张灵摆刻度与原本数值不同的卡为对象可以发动。该卡的灵摆刻度直至回合结束时为止变为原本的数值。
 card_type: Monster
 monster_type_line: Spellcaster / Pendulum / Effect
 attribute: LIGHT
@@ -59,7 +59,7 @@ pendulum_effect:
     ①: 1턴에 1번, 패의 펜듈럼 몬스터 1장을 상대에게 보여주고, 자신의 펜듈럼 존의 "마술사" 카드 1장을 대상으로 하여 발동할 수 있다. 그 "마술사" 카드의 펜듈럼 스케일은 턴 종료시까지, 보여준 펜듈럼 몬스터의 펜듈럼 스케일과 같아진다.
   zh-TW:
   zh-CN: |-
-    ①：1回合1次，把手卡1只灵摆怪兽给对方观看，以自己的灵摆区域1张「魔术师」卡为对象才能发动。那张「魔术师」卡的灵摆刻度直到回合结束时变成和给人观看的灵摆怪兽的灵摆刻度相同。
+    ①：另一方自己的灵摆区域有“魔术师”卡或“娱乐伙伴”卡存在的情况下可以发动。破坏此卡，从牌组挑选“慧眼的魔术师”以外的1只“魔术师”灵摆怪兽，放在自己的灵摆区域。
 series:
 - Magician
 images:
@@ -134,6 +134,11 @@ sets:
     set_name: Dimension Box Limited Edition
     rarities:
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: SD29-SC011
+    set_name: 'Structure Deck: Master of Pendulum'
+    rarities:
+    - Common
   - set_number: SD31-KR015
     set_name: 'Structure Deck: Pendulum Evolution'
     rarities:
