--- a/data/cards/92731385.yaml
+++ b/data/cards/92731385.yaml
@@ -105,6 +105,6 @@ sets:
     - Super Rare
     - Prismatic Secret Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 870967
