--- a/rush.yaml
+++ b/rush.yaml
@@ -91545,3 +91545,113 @@ sets:
     rarities:
     - Rare
 yugipedia_page_id: 935689
+---
+konami_id:
+name:
+  en: Trap Mole
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: トラップモール
+  ja_romaji: Torappu Mōru
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have "Trap Hole" in your Graveyard during the turn you Normal Summoned this card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Set 1 Trap Card from your Graveyard in your Spell & Trap Zone.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Beast / Effect
+attribute: EARTH
+level: 3
+atk: 600
+def: 900
+images:
+- index: 1
+  image: TrapMole-RDLGP1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/LGP1-JP039
+    set_name: Legend Awakening Pack
+    rarities:
+    - Common
+yugipedia_page_id: 935773
+---
+konami_id:
+name:
+  en: Goblin Holedigger Captain
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ゴブリン<ruby>穴<rt>あな</rt></ruby><ruby>掘<rt>ほ</rt></ruby>り<ruby>隊<rt>たい</rt></ruby><ruby>長<rt>ちょう</rt></ruby>
+  ja_romaji: Goburin Anahori Taichō
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If you have "The Warrior Returning Alive" or "Trap Hole" in your Graveyard, send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    1 face-up monster on your opponent's field loses ATK equal to [the total number of "The Warrior Returning Alive" and "Trap Hole" in your Graveyard] x 1000 until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Effect
+attribute: EARTH
+level: 4
+atk: 900
+def: 400
+images:
+- index: 1
+  image: GoblinHolediggerCaptain-RDLGP1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/LGP1-JP033
+    set_name: Legend Awakening Pack
+    rarities:
+    - Common
+yugipedia_page_id: 935774
