--- a/data/cards/51858200.yaml
+++ b/data/cards/51858200.yaml
@@ -12,7 +12,7 @@ name:
   ko: 프레데터 플래닛
   ko_rr:
   zh-TW:
-  zh-CN: 捕食惑星
+  zh-CN: 捕食行星
 text:
   en: |-
     If a monster with a Predator Counter leaves the field while this card is face-up on the field: Add 1 "Predap" card from your Deck to your hand. You can only use this effect of "Predaplanet" once per turn. You can banish this card from your Graveyard; Fusion Summon 1 Fusion Monster from your Extra Deck, using monsters from your hand or field as Fusion Materials. Only "Predaplant" monsters can be used as Fusion Materials for a Fusion Summon using this effect.
@@ -32,7 +32,7 @@ text:
     "프레데터 플랜츠"의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 마법 / 함정 존에 존재하고, 포식 카운터가 놓여 있는 몬스터가 필드에서 벗어났을 경우에 발동한다. 덱에서 "프레데터" 카드 1장을 패에 넣는다. ②: 묘지의 이 카드를 제외하고 발동할 수 있다. 자신의 패 / 필드에서, 융합 몬스터 카드에 기재된 융합 소재 몬스터를 묘지로 보내고, 그 융합 몬스터 1장을 엑스트라 덱에서 융합 소환한다. 이 효과로 융합 소환할 경우, "프레데터 플랜츠" 몬스터밖에 융합 소재로 할 수 없다.
   zh-TW:
   zh-CN: |-
-    「捕食惑星」的①的效果1回合只能使用1次。 ①：这张卡在魔法与陷阱区域存在，有捕食指示物放置的怪兽从场上离开的场合发动。从卡组把1张「捕食」卡加入手卡。 ②：把墓地的这张卡除外才能发动。从自己的手卡·场上把融合怪兽卡决定的融合素材怪兽送去墓地，把那1只融合怪兽从额外卡组融合召唤。这个效果融合召唤的场合，不是「捕食植物」怪兽不能作为融合素材。
+    此卡名的①效果１回合仅可使用１次。①：此卡存在于魔法与陷阱区域、放有捕食计数物的怪兽从场上离开的情况下发动。从牌组将１张“捕食”卡加入手牌。②：将墓地的此卡除外可以发动。从自己的手牌・场上，将由融合怪兽卡决定的融合素材怪兽送至墓地，从额外牌组将１只该融合怪兽融合召唤。以此效果进行融合召唤的情况下，仅可以“捕食植物”怪兽作为融合素材。
 card_type: Trap
 property: Continuous
 series:
@@ -78,6 +78,11 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: CL02-SC054
+    set_name: Classic Pack 02
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
