--- a/data/cards/91392974.yaml
+++ b/data/cards/91392974.yaml
@@ -32,8 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드의 앞면 표시의 "히어로" 몬스터가 전투 / 효과로 파괴되었을 경우에 발동할 수 있다. 덱에서 레벨 4 이하의 "비전 히어로" 몬스터 1장을 특수 소환한다. 그 후, 상대 필드의 몬스터 1장을 골라, 그 원래의 공격력 / 수비력을 절반으로 할 수 있다.
   zh-TW:
   zh-CN: |-
-    这个卡名的卡在1回合只能发动1张。
-    ①：自己场上的表侧表示的「英雄」怪兽被战斗·效果破坏的场合才能发动。从卡组把1只4星以下的「幻影英雄」怪兽特殊召唤。那之后，可以选对方场上1只怪兽，那个原本的攻击力·守备力变成一半。
+    此卡名的卡１回合仅可发动１张。①：自己场上表侧表示的“－英雄”怪兽因战斗・效果被破坏的情况下可以发动。从牌组将１只等级４以下的“幻影－英雄”怪兽特殊召唤。然后可挑选对手场上的１只怪兽，将其原本的攻击力・守备力改成一半。
 card_type: Trap
 property: Normal
 images:
@@ -73,6 +72,11 @@ sets:
   ko:
   - set_number: CP19-KR013
     set_name: 'Collection Pack: Duelist of Revolution Version'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC033
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
