--- a/data/cards/05259518.yaml
+++ b/data/cards/05259518.yaml
@@ -12,7 +12,7 @@ name:
   ko: 프레데터 플랜츠 헬리암포링쿠스
   ko_rr: Peuredeteo Peullaencheu Helliamporingkuseu
   zh-TW:
-  zh-CN: 捕食植物 太阳瓶子草喙嘴龙
+  zh-CN: 捕食植物 太阳瓶草喙嘴龙
 text:
   en: |-
     If your opponent controls a monster with a Predator Counter: You can Special Summon this card from your hand. If this card in its owner's possession is destroyed by your opponent's card: You can target 1 DARK Dragon or 1 DARK Plant monster in your GY, except "Predaplant Heliamphorhynchus"; Special Summon it. You can only use each effect of "Predaplant Heliamphorhynchus" once per turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 상대 필드의 몬스터에 포식 카운터가 놓여 있을 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 이 카드가 상대에 의해 파괴되었을 경우, "프레데터 플랜츠 헬리암포링쿠스" 이외의 자신 묘지의 드래곤족 / 식물족인 어둠 속성 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：对方场上的怪兽有捕食指示物放置中的场合才能发动。这张卡从手卡特殊召唤。
-    ②：这张卡被对方破坏的场合，以「捕食植物 太阳瓶子草喙嘴龙」以外的自己墓地1只龙族·植物族的暗属性怪兽为对象才能发动。那只怪兽特殊召唤。
+    此卡名的①②效果１回合仅可各使用１次。①：对手场上的怪兽放有捕食计数物的情况下可以发动。从手牌将此卡特殊召唤。②：此卡因对手被破坏的情况下，以自己墓地“捕食植物 太阳瓶草喙嘴龙”以外的１只龙族・植物族暗属性怪兽为对象可以发动。将该怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Plant / Effect
 attribute: DARK
@@ -103,6 +101,11 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 5'
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: CL02-SC043
+    set_name: Classic Pack 02
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
