--- a/data/cards/08148322.yaml
+++ b/data/cards/08148322.yaml
@@ -12,7 +12,7 @@ name:
   ko: 프레데터 프라임 퓨전
   ko_rr: Peuredeteo Peuraim Pyujeon
   zh-TW:
-  zh-CN: 捕食霸种融合
+  zh-CN: 捕食优选结合
 text:
   en: |-
     If a "Predaplant" monster(s) is on the field: Fusion Summon 1 DARK Fusion Monster from your Extra Deck, using monsters from either field as material, including 2 or more DARK monsters you control. You can only activate 1 "Predaprime Fusion" per turn.
@@ -32,8 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 필드에 "프레데터 플랜츠" 몬스터가 존재할 경우에 발동할 수 있다. 자신 / 상대 필드에서, 어둠 속성 융합 몬스터 카드에 기재된, 자신 필드의 어둠 속성 몬스터 2장 이상을 포함하는 융합 소재 몬스터를 묘지로 보내고, 그 융합 몬스터 1장을 엑스트라 덱에서 융합 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的卡在1回合只能发动1张。
-    ①：场上有「捕食植物」怪兽存在的场合才能发动。从自己·对方场上把暗属性融合怪兽卡决定的包含自己场上的暗属性怪兽2只以上在内的融合素材怪兽送去墓地，把那1只融合怪兽从额外卡组融合召唤。
+    此卡名的卡１回合仅可发动１张。①：场上有“捕食植物”怪兽存在的情况下可以发动。从自己・对手场上，将由暗属性融合怪兽卡决定的、包含２只以上自己场上暗属性怪兽的融合素材怪兽送至墓地，从额外牌组将１只该融合怪兽融合召唤。
 card_type: Spell
 property: Quick-Play
 series:
@@ -98,6 +97,11 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 5'
     rarities:
     - Rare
+  zh-CN:
+  - set_number: CL02-SC053
+    set_name: Classic Pack 02
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
