--- a/data/cards/14463695.yaml
+++ b/data/cards/14463695.yaml
@@ -12,7 +12,7 @@ name:
   ko: 프레데터 그래프트
   ko_rr:
   zh-TW:
-  zh-CN: 捕食嫁接
+  zh-CN: 捕食嫁接木
 text:
   en: |-
     Activate this card by targeting 1 "Predaplant" monster in your Graveyard; Special Summon it and equip it with this card. When this card leaves the field, destroy that monster.
@@ -32,7 +32,7 @@ text:
     ①: 자신 묘지의 "프레데터 플랜츠" 몬스터 1장을 대상으로 하고 이 카드를 발동할 수 있다. 그 몬스터를 특수 소환하고, 이 카드를 장착한다. 이 카드가 필드에서 벗어났을 때에 그 몬스터는 파괴된다.
   zh-TW:
   zh-CN: |-
-    ①：以自己墓地1只「捕食植物」怪兽为对象才能把这张卡发动。那只怪兽特殊召唤，把这张卡装备。这张卡从场上离开时那只怪兽破坏。
+    ①：以自己墓地的１只“捕食植物”怪兽为对象可以发动此卡。将该怪兽特殊召唤，装备此卡。此卡从场上离开时，该怪兽将被破坏。
 card_type: Spell
 property: Equip
 series:
@@ -78,6 +78,11 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: CL02-SC050
+    set_name: Classic Pack 02
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
