--- a/data/cards/19186123.yaml
+++ b/data/cards/19186123.yaml
@@ -32,8 +32,7 @@ text:
     ①: 자신의 마법 & 함정 존의 "비전 히어로" 몬스터 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 특수 소환한다. ②: 묘지의 이 카드를 제외하고, 자신 묘지의 "비전 히어로" 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 패에 넣는다. 이 효과는 이 카드가 묘지로 보내진 턴에는 발동할 수 없다.
   zh-TW:
   zh-CN: |-
-    ①：以自己的魔法与陷阱区域1张「幻影英雄」怪兽卡为对象才能发动。那张卡特殊召唤。
-    ②：把墓地的这张卡除外，以自己墓地1只「幻影英雄」怪兽为对象才能发动。那只怪兽加入手卡。这个效果在这张卡送去墓地的回合不能发动。
+    ①：以自己魔法与陷阱区域的１张“幻影－英雄”怪兽卡为对象可以发动。将该卡特殊召唤。②：将墓地的此卡除外，以自己墓地的１只“幻影－英雄”怪兽为对象可以发动。将该怪兽加入手牌。此效果在此卡被送至墓地的回合不可发动。
 card_type: Spell
 property: Normal
 images:
@@ -75,6 +74,11 @@ sets:
     set_name: 'Collection Pack: Duelist of Revolution Version'
     rarities:
     - Rare
+  zh-CN:
+  - set_number: CL02-SC031
+    set_name: Classic Pack 02
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
