--- a/data/cards/22138839.yaml
+++ b/data/cards/22138839.yaml
@@ -12,7 +12,7 @@ name:
   ko: 프레데터 플랜츠 뱅크셔오우거
   ko_rr:
   zh-TW:
-  zh-CN: 捕食植物 尖牙鱼佛塔花
+  zh-CN: 捕食植物 佛塔树食人魔
 text:
   en: |-
     You can Special Summon this card (from your hand) by Tributing 1 opponent's monster with a Predator Counter. If this card is sent from the field to the GY: Place 1 Predator Counter on each face-up monster your opponent controls, and if you do, any of those monsters that are Level 2 or higher become Level 1 as long as they have a Predator Counter.
@@ -32,7 +32,7 @@ text:
     ① : 이 카드는 상대 필드의 포식 카운터가 놓여진 몬스터 1장을 릴리스했을 경우에 패에서 특수 소환할 수 있다. ② : 이 카드가 필드에서 묘지로 보내졌을 경우에 발동한다. 상대 필드의 앞면 표시 몬스터 전부에 포식 카운터를 1개씩 놓는다. 포식 카운터가 놓여진 레벨 2 이상의 몬스터 레벨은 1 이 된다.
   zh-TW:
   zh-CN: |-
-    ①：这张卡把对方场上1只有捕食指示物放置的怪兽解放的场合可以从手卡特殊召唤。②：这张卡从场上送去墓地的场合发动。给对方场上的表侧表示怪兽全部各放置1个捕食指示物。有捕食指示物放置的2星以上的怪兽的等级变成1星。
+    ①：此卡可在解放对手场上１只放有捕食计数物的怪兽的情况下，来从手牌特殊召唤。②：此卡从场上被送至墓地的情况下发动。在对手场上所有表侧表示怪兽上各放１个捕食计数物。放有捕食计数物的等级２以上怪兽的等级变为１。
 card_type: Monster
 monster_type_line: Plant / Tuner / Effect
 attribute: DARK
@@ -79,6 +79,11 @@ sets:
   ko:
   - set_number: COTD-KR016
     set_name: Code of the Duelist
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC041
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
