--- a/data/cards/24382602.yaml
+++ b/data/cards/24382602.yaml
@@ -32,7 +32,7 @@ text:
     ①: 이 카드가 필드 존에 존재하는 한, 자신은 통상 소환 외에도 1번만, 자신 메인 페이즈에 빛 속성 / 레벨 1 튜너 1장을 일반 소환할 수 있다. ②: 1턴에 1번, 자신 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 패 / 덱에서 일반 몬스터 1장을 묘지로 보낸다. 대상 몬스터의 공격력 / 수비력은 턴 종료시까지, 묘지로 보낸 몬스터의 레벨 × 100 올린다. ③: 묘지의 이 카드를 제외하고 발동할 수 있다. 덱에서 "멸망의 폭렬질풍탄" 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    ①：只要这张卡在场地区域存在，自己在通常召唤外加上只有1次，自己主要阶段可以把1只光属性·1星调整召唤。②：1回合1次，以自己场上1只表侧表示怪兽为对象才能发动。从手卡·卡组把1只通常怪兽送去墓地。作为对象的怪兽的攻击力·守备力直到回合结束时上升送去墓地的怪兽的等级×100。③：把墓地的这张卡除外才能发动。从卡组把1张「毁灭之爆裂疾风弹」加入手卡。
+    ①：此卡只要存在于场地区域，自己在通常召唤外仅可追加１次，在自己的主要阶段召唤１只光属性・等级１协调。②：１回合１次，以自己场上的１只表侧表示怪兽为对象可以发动。从手牌・牌组将１只通常怪兽送至墓地。对象怪兽的攻击力・守备力直至回合结束时为止，上升相当于送至墓地的怪兽原本等级×１００的数值。③：将墓地的此卡除外可以发动。从牌组将１张“毁灭的爆裂疾风弹”加入手牌。
 card_type: Spell
 property: Field
 images:
@@ -154,6 +154,11 @@ sets:
     set_name: Shining Victories
     rarities:
     - Rare
+  zh-CN:
+  - set_number: CL02-SC017
+    set_name: Classic Pack 02
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
