--- a/data/cards/30537973.yaml
+++ b/data/cards/30537973.yaml
@@ -32,12 +32,7 @@ text:
     이 카드명의 몬스터 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환 / 특수 소환에 성공한 턴의 엔드 페이즈에, 패에서 식물족 몬스터 1장을 버리고 발동할 수 있다. 덱에서 레벨 4 이하의 식물족 몬스터 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    ←8 【灵摆】 8→
-    这个卡名的灵摆效果1回合只能使用1次。
-    ①：这张卡发动的回合的自己主要阶段，以这张卡以外的魔法与陷阱区域1张表侧表示的卡为对象才能发动。那张卡破坏。
-    【怪兽效果】
-    这个卡名的怪兽效果1回合只能使用1次。
-    ①：这张卡召唤·特殊召唤成功的回合的结束阶段，从手卡丢弃1只植物族怪兽才能发动。从卡组把1只4星以下的植物族怪兽加入手卡。
+    此卡名的怪兽效果１回合仅可使用１次。①：在此卡召唤・特殊召唤成功的回合的结束阶段，从手牌将１只植物族怪兽舍弃可以发动。从牌组将１只等级４以下的植物族怪兽加入手牌。
 card_type: Monster
 monster_type_line: Plant / Pendulum / Effect
 attribute: DARK
@@ -63,7 +58,8 @@ pendulum_effect:
   ko: |-
     이 카드명의 펜듈럼 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드를 발동한 턴의 자신 메인 페이즈에, 이 카드 이외의 마법 & 함정 존의 앞면 표시의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 파괴한다.
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    此卡名的灵摆效果１回合仅可使用１次。①：在发动此卡的回合的自己的主要阶段，以此卡以外的１张魔法与陷阱区域的表侧表示卡为对象可以发动。将该卡破坏。
 series:
 - Predap
 - Predaplant
@@ -113,6 +109,11 @@ sets:
     - Super Rare
   - set_number: LVP3-KR075
     set_name: LINK VRAINS Pack 3
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC042
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
