--- a/data/cards/45467446.yaml
+++ b/data/cards/45467446.yaml
@@ -12,7 +12,7 @@ name:
   ko: 하얀 영룡
   ko_rr: Hayan Yeongnyong
   zh-TW:
-  zh-CN: 白色灵龙
+  zh-CN: 白之灵龙
 text:
   en: |-
     (This card is always treated as a "Blue-Eyes" card.)
@@ -38,7 +38,7 @@ text:
     이 카드명은 룰상 "푸른 눈" 카드로도 취급한다. ①: 이 카드는 패 / 묘지에 존재하는 한, 일반 몬스터로 취급한다. ②: 이 카드가 일반 소환 / 특수 소환에 성공했을 때, 상대 필드의 마법 / 함정 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 제외한다. ③: 상대 필드에 몬스터가 존재할 경우, 이 카드를 릴리스하고 발동할 수 있다. 패에서 "푸른 눈의 백룡" 1장을 특수 소환한다. 이 효과는 상대 턴에도 발동할 수 있다.
   zh-TW:
   zh-CN: |-
-    这个卡名在规则上也当作「青眼」卡使用。①：这张卡只要在手卡·墓地存在，当作通常怪兽使用。②：这张卡召唤·特殊召唤成功时，以对方场上1张魔法·陷阱卡为对象才能发动。那张卡除外。③：对方场上有怪兽存在的场合，把这张卡解放才能发动。从手卡把1只「青眼白龙」特殊召唤。这个效果在对方回合也能发动。
+    此卡名在规则上也视为“青眼”卡。①：此卡只要存在于手牌・墓地，则视为通常怪兽。②：此卡召唤・特殊召唤成功时，以对手场上１张魔法・陷阱卡为对象可以发动。将该卡除外。③：对手场上有怪兽存在的情况下，解放此卡可以发动。从手牌将１只“青眼白龙”特殊召唤。此效果在对手回合中也可以发动。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: LIGHT
@@ -178,6 +178,11 @@ sets:
     set_name: Legendary Gold Set
     rarities:
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: CL02-SC009
+    set_name: Classic Pack 02
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
