--- a/data/cards/45644898.yaml
+++ b/data/cards/45644898.yaml
@@ -12,7 +12,7 @@ name:
   ko: 파란 눈의 제사
   ko_rr:
   zh-TW:
-  zh-CN: 青色眼睛的祭司
+  zh-CN: 青之眼祭司
 text:
   en: |-
     When this card is Normal Summoned: You can target 1 Level 1 LIGHT Tuner in your GY; add it to your hand. You can shuffle this card from your GY into the Deck, then target 1 Effect Monster you control; send it to the GY, and if you do, Special Summon 1 "Blue-Eyes" monster from your GY, other than the sent monster. You can only use this effect of "Master with Eyes of Blue" once per turn.
@@ -32,7 +32,7 @@ text:
     "파란 눈의 제사"의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환에 성공했을 때, 자신 묘지의 빛 속성 / 레벨 1 튜너 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 패에 넣는다. ②: 묘지의 이 카드를 덱으로 되돌리고, 자신 필드의 효과 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 묘지로 보내고, 그 몬스터 이외의 "푸른 눈" 몬스터 1장을 자신 묘지에서 골라 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    「青色眼睛的祭司」的②的效果1回合只能使用1次。①：这张卡召唤成功时，以自己墓地1只光属性·1星调整为对象才能发动。那只怪兽加入手卡。②：让墓地的这张卡回到卡组，以自己场上1只效果怪兽为对象才能发动。那只怪兽送去墓地，从自己墓地选那只怪兽以外的1只「青眼」怪兽特殊召唤。
+    此卡名的②效果１回合仅可使用１次。①：此卡召唤成功时，以自己墓地的１只光属性・等级１协调为对象可以发动。将该怪兽加入手牌。②：将墓地的此卡放回牌组，以自己场上的１只效果怪兽为对象可以发动。将该怪兽送至墓地，从自己的墓地挑选该怪兽以外的１只“青眼”怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Spellcaster / Tuner / Effect
 attribute: LIGHT
@@ -158,6 +158,11 @@ sets:
   ko:
   - set_number: SHVI-KR021
     set_name: Shining Victories
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC008
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
