--- a/data/cards/50371210.yaml
+++ b/data/cards/50371210.yaml
@@ -32,7 +32,7 @@ text:
     ①: 자신 필드에 다른 "빛의 인도"가 존재하지 않으며, 자신 묘지에 "푸른 눈" 몬스터가 3장 이상 존재할 경우, 그 중의 1장을 대상으로 하고 이 카드를 발동할 수 있다. 그 몬스터를 효과를 무효로 하고 특수 소환하여, 이 카드를 장착한다. 이 카드가 필드에서 벗어났을 때에 그 몬스터는 제외된다. ②: 장착 몬스터 이외의 자신 몬스터는 공격할 수 없으며, 자신 묘지에 "푸른 눈" 몬스터가 존재할 경우, 장착 몬스터는 그 수까지 1번의 배틀 페이즈 중에 공격할 수 있다.
   zh-TW:
   zh-CN: |-
-    ①：自己场上没有其他的「光之引导」存在，自己墓地有「青眼」怪兽3只以上存在的场合，以那之内的1只为对象才能把这张卡发动。那只怪兽效果无效特殊召唤，把这张卡装备。这张卡从场上离开时那只怪兽除外。②：装备怪兽以外的自己怪兽不能攻击，自己墓地有「青眼」怪兽存在的场合，装备怪兽在同1次的战斗阶段中可以作出最多有那个数量的攻击。
+    ①：自己场上没有其他“光之引导”存在，自己的墓地有３只以上“青眼”怪兽存在的情况下，以其中１只为对象可以发动此卡。将该怪兽的效果无效并特殊召唤，装备此卡。此卡从场上离开时，该怪兽被除外。②：装备怪兽以外的自己的怪兽不可攻击，自己墓地有“青眼”怪兽存在的情况下，装备怪兽在１次战斗阶段中最多可攻击相当于其数量的次数。
 card_type: Spell
 property: Equip
 images:
@@ -172,6 +172,11 @@ sets:
   ko:
   - set_number: SHVI-KR060
     set_name: Shining Victories
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC018
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
