--- a/data/cards/51570882.yaml
+++ b/data/cards/51570882.yaml
@@ -12,7 +12,7 @@ name:
   ko: 그리디 베놈 퓨전 드래곤
   ko_rr: Geuridi Benom Pyujeon Deuraegon
   zh-TW:
-  zh-CN: 强欲毒融合龙
+  zh-CN: 贪婪猛毒结合龙
 text:
   en: |-
     1 "Predaplant" monster + 1 DARK monster whose original Level is 8 or higher
@@ -40,8 +40,8 @@ text:
     이 카드는 융합 소환으로만 엑스트라 덱에서 특수 소환할 수 있다. ①: 1턴에 1번, 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 턴 종료시까지, 그 몬스터의 공격력은 0 이 되고, 효과는 무효화된다. ②: 이 카드가 파괴되어 묘지로 보내졌을 경우에 발동한다. 필드의 몬스터를 전부 파괴한다. 그 후, 자신 묘지의 레벨 8 이상인 어둠 속성 몬스터 1장을 제외하고 이 카드를 묘지에서 특수 소환할 수 있다.
   zh-TW:
   zh-CN: |-
-    「捕食植物」怪兽＋原本等级是8星以上的暗属性怪兽
-    这张卡用融合召唤才能从额外卡组特殊召唤。①：1回合1次，以场上1只表侧表示怪兽为对象才能发动。直到回合结束时，那只怪兽的攻击力变成0，效果无效化。②：这张卡被破坏送去墓地的场合发动。场上的怪兽全部破坏。那之后，可以把自己墓地1只8星以上的暗属性怪兽除外把这张卡从墓地特殊召唤。
+    “捕食植物”怪兽＋原本等级为８以上的暗属性怪兽
+    此卡仅可以融合召唤从额外牌组特殊召唤。①：１回合１次，以场上的１只表侧表示怪兽为对象可以发动。直至回合结束时为止，该怪兽的攻击力变为０，效果无效化。②：此卡被破坏并被送至墓地的情况下发动。将场上的怪兽全部破坏。然后，可将自己墓地１只等级８以上的暗属性怪兽除外，将此卡从墓地特殊召唤。
 card_type: Monster
 monster_type_line: Dragon / Fusion / Effect
 attribute: DARK
@@ -98,6 +98,11 @@ sets:
     - Secret Rare
   - set_number: LVP3-KR073
     set_name: LINK VRAINS Pack 3
+    rarities:
+    - Rare
+  zh-CN:
+  - set_number: CL02-SC048
+    set_name: Classic Pack 02
     rarities:
     - Rare
 limit_regulation:
