--- a/data/cards/52792430.yaml
+++ b/data/cards/52792430.yaml
@@ -12,7 +12,7 @@ name:
   ko: 프레데터 플랜츠 스피노 디오네아
   ko_rr: Peuredeteo Peullaencheu Seupino Dionea
   zh-TW:
-  zh-CN: 捕食植物 捕蝇草棘龙
+  zh-CN: 捕食植物 棘龙捕蝇草
 text:
   en: |-
     If this card is Normal or Special Summoned: You can target 1 face-up monster your opponent controls; place 1 Predator Counter on it, and if it is Level 2 or higher, it becomes Level 1 as long as it has a Predator Counter. After damage calculation, if this card battled a monster with an equal or lower Level: You can Special Summon 1 "Predaplant" monster from your Deck, except "Predaplant Spinodionaea".
@@ -32,7 +32,7 @@ text:
     ①: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우, 상대 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터에 포식 카운터를 1개 놓는다. 포식 카운터가 놓여진 레벨 2 이상의 몬스터 레벨은 1 이 된다. ②: 이 카드가 이 카드의 레벨 이하의 레벨을 가지는 몬스터와 전투를 실행한 데미지 계산 후에 발동할 수 있다. 덱에서 "프레데터 플랜츠 스피노 디오네아" 이외의 "프레데터 플랜츠" 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    ①：这张卡召唤·特殊召唤成功的场合，以对方场上1只表侧表示怪兽为对象才能发动。给那只怪兽放置1个捕食指示物。有捕食指示物放置的2星以上的怪兽的等级变成1星。 ②：这张卡和持有这张卡的等级以下的等级的怪兽进行战斗的伤害计算后才能发动。从卡组把「捕食植物 捕蝇草棘龙」以外的1只「捕食植物」怪兽特殊召唤。
+    ①：此卡召唤・特殊召唤成功的情况下，以对手场上的１只表侧表示怪兽为对象可以发动。在该怪兽上放１个捕食计数物。放有捕食计数物的等级２以上怪兽的等级变为１。②：此卡与拥有此卡等级以下等级的怪兽进行战斗的伤害计算后可以发动。从牌组将１只“捕食植物 棘龙捕蝇草”以外的“捕食植物”怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Plant / Effect
 attribute: DARK
@@ -89,6 +89,11 @@ sets:
     - Normal Parallel Rare
   - set_number: LVP3-KR074
     set_name: LINK VRAINS Pack 3
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC037
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
