--- a/data/cards/53819028.yaml
+++ b/data/cards/53819028.yaml
@@ -32,7 +32,7 @@ text:
     "프레데터 플랜츠 세라세니앤트"의 ③의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 상대 몬스터의 직접 공격 선언시에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 이 카드가 상대 몬스터와 전투를 실행한 데미지 계산 후에 발동할 수 있다. 그 상대 몬스터를 파괴한다. ③: 필드의 이 카드가 효과로 묘지로 보내졌을 경우, 또는 전투로 파괴되었을 경우에 발동할 수 있다. 덱에서 "프레데터 플랜츠 세라세니앤트" 이외의 "프레데터" 카드 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    「捕食植物 瓶子草蚁」的③的效果1回合只能使用1次。 ①：对方怪兽的直接攻击宣言时才能发动。这张卡从手卡特殊召唤。 ②：这张卡和对方怪兽进行战斗的伤害计算后才能发动。那只对方怪兽破坏。 ③：场上的这张卡被效果送去墓地的场合或者被战斗破坏的场合才能发动。从卡组把「捕食植物 瓶子草蚁」以外的1张「捕食」卡加入手卡。
+    此卡名的③效果１回合仅可使用１次。①：对手怪兽直接攻击宣言时可以发动。从手牌将此卡特殊召唤。②：此卡与对手怪兽进行战斗的伤害计算后可以发动。将该对手的怪兽破坏。③：场上的此卡因效果被送至墓地的情况下，或因战斗被破坏的情况下可以发动。从牌组将１张“捕食植物 瓶子草蚁”以外的“捕食”卡加入手牌。
 card_type: Monster
 monster_type_line: Plant / Effect
 attribute: DARK
@@ -83,6 +83,11 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: CL02-SC035
+    set_name: Classic Pack 02
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
