--- a/data/cards/54185227.yaml
+++ b/data/cards/54185227.yaml
@@ -12,7 +12,7 @@ name:
   ko: 비전 히어로 그래비토
   ko_rr: Bijeon Hieoro Geuraebito
   zh-TW:
-  zh-CN: 幻影英雄 引力人
+  zh-CN: 幻影－英雄 引力
 text:
   en: |-
     If this card is Normal or Special Summoned: You can target 1 of your banished "HERO" monsters; add it to your hand. You can Tribute this card, then target 2 "Vision HERO" Monster Cards in your Spell & Trap Zone; Special Summon them. You can only use each effect of "Vision HERO Gravito" once per turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우, 제외되어 있는 자신의 "히어로" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 패에 넣는다. ②: 이 카드를 릴리스하고, 자신의 마법 & 함정 존의 "비전 히어로" 몬스터 카드 2장을 대상으로 하여 발동할 수 있다. 그 카드를 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：这张卡召唤·特殊召唤成功的场合，以除外的1只自己的「英雄」怪兽为对象才能发动。那只怪兽加入手卡。
-    ②：把这张卡解放，以自己的魔法与陷阱区域2张「幻影英雄」怪兽卡为对象才能发动。那些卡特殊召唤。
+    此卡名的①②效果１回合仅可各使用１次。①：此卡召唤・特殊召唤成功的情况下，以自己被除外的１只“－英雄”怪兽为对象可以发动。将该怪兽加入手牌。②：解放此卡，以自己魔法与陷阱区域的２张“幻影－英雄”怪兽卡为对象可以发动。将该卡特殊召唤。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: DARK
@@ -101,6 +99,11 @@ sets:
   ko:
   - set_number: CP19-KR009
     set_name: 'Collection Pack: Duelist of Revolution Version'
+    rarities:
+    - Rare
+  zh-CN:
+  - set_number: CL02-SC026
+    set_name: Classic Pack 02
     rarities:
     - Rare
 limit_regulation:
