--- a/data/cards/57425061.yaml
+++ b/data/cards/57425061.yaml
@@ -32,8 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신의 패 / 필드에서, "히어로" 융합 몬스터 카드에 기재된 융합 소재 몬스터를 묘지로 보내고, 그 융합 몬스터 1장을 엑스트라 덱에서 융합 소환한다. 자신의 마법 & 함정 존에 융합 소재 몬스터가 지속 함정 카드로 취급되어 존재할 경우, 그 몬스터 카드를 제외하고 융합 소재로 할 수도 있다(최대 2장까지).
   zh-TW:
   zh-CN: |-
-    这个卡名的卡在1回合只能发动1张。
-    ①：从自己的手卡·场上把「英雄」融合怪兽卡决定的融合素材怪兽送去墓地，把那1只融合怪兽从额外卡组融合召唤。自己的魔法与陷阱区域有融合素材怪兽当作永续陷阱卡使用而存在的场合，也能把那怪兽卡除外作为融合素材（最多2张）。
+    此卡名的卡１回合仅可发动１张。①：从自己的手牌・场上，将由“－英雄”融合怪兽卡决定的融合素材怪兽送至墓地，从额外牌组将１只该融合怪兽融合召唤。融合素材怪兽在自己的魔法与陷阱区域视为永续陷阱卡存在的情况下，也可将该怪兽卡除外来作为融合素材（最多２张）。
 card_type: Spell
 property: Normal
 series:
@@ -77,6 +76,11 @@ sets:
     set_name: 'Collection Pack: Duelist of Revolution Version'
     rarities:
     - Common
+  zh-CN:
+  - set_number: CL02-SC032
+    set_name: Classic Pack 02
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
