--- a/data/cards/69105797.yaml
+++ b/data/cards/69105797.yaml
@@ -32,7 +32,7 @@ text:
     ①: 이 카드를 패에서 묘지로 보내고, 자신 필드의 앞면 표시 몬스터 1장을 대상으로 하여 발동할 수 있다. 이 턴에, 그 몬스터는 포식 카운터가 놓여진 상대 몬스터 전부에 1회씩 공격할 수 있다. ②: 앞면 표시의 이 카드가 필드에서 벗어났을 경우에 발동한다. 상대 필드의 특수 소환된 몬스터 전부에 포식 카운터를 1개씩 놓는다. 포식 카운터가 놓여진 레벨 2 이상의 몬스터 레벨은 1 이 된다.
   zh-TW:
   zh-CN: |-
-    ①：把这张卡从手卡送去墓地，以自己场上1只表侧表示怪兽为对象才能发动。这个回合，那只怪兽可以向有捕食指示物放置的对方怪兽全部各作1次攻击。②：表侧表示的这张卡从场上离开的场合发动。给对方场上的特殊召唤的怪兽全部各放置1个捕食指示物。有捕食指示物放置的2星以上的怪兽的等级变成1星。
+    ①：将此卡从手牌送至墓地，以自己场上的１只表侧表示怪兽为对象可以发动。此回合，该怪兽可攻击所有放有捕食计数物的对手怪兽各１次。②：表侧表示的此卡从场上离开的情况下发动。在对手场上所有被特殊召唤的怪兽上各放１个捕食计数物。放有捕食计数物的等级２以上怪兽的等级变为１。
 card_type: Monster
 monster_type_line: Plant / Effect
 attribute: DARK
@@ -131,6 +131,11 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: CL02-SC034
+    set_name: Classic Pack 02
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
