--- a/data/cards/71867500.yaml
+++ b/data/cards/71867500.yaml
@@ -12,7 +12,7 @@ name:
   ko: 드래곤 부활의 광주
   ko_rr: Deuraegon Buhwal-ui Gwangju
   zh-TW:
-  zh-CN: 龙复活狂想曲
+  zh-CN: 龙之复活狂想曲
 text:
   en: |-
     If you control a Spellcaster monster: You can target up to 2 Dragon monsters in your GY, including at least 1 Normal Monster; Special Summon them. Your opponent takes no damage this turn. You can only activate 1 "Dragon Revival Rhapsody" per turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드에 마법사족 몬스터가 존재할 경우, 드래곤족 일반 몬스터를 포함하는, 자신 묘지의 드래곤족 몬스터를 2장까지 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다. 이 카드의 발동 후, 턴 종료시까지 상대가 받는 모든 데미지는 0 이 된다.
   zh-TW:
   zh-CN: |-
-    自己场上有魔法师族怪兽存在的场合：可以选择包含通常怪兽的自己墓地最多2只龙族怪兽；那些怪兽特殊召唤。这个回合对方受到的全部伤害变成0。「龙复活狂想曲」在1回合只能发动1张。
+    此卡名的卡１回合仅可发动１张。①：自己场上有魔法师族怪兽存在的情况下，以自己墓地包含龙族通常怪兽在内的最多２只龙族怪兽为对象可以发动。将该怪兽特殊召唤。此卡发动后，直至回合结束时为止，对手受到的所有伤害变为０。
 card_type: Spell
 property: Normal
 images:
@@ -94,6 +94,11 @@ sets:
     set_name: Extra Pack 2018
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: CL02-SC016
+    set_name: Classic Pack 02
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
