--- a/data/cards/72855441.yaml
+++ b/data/cards/72855441.yaml
@@ -12,7 +12,7 @@ name:
   ko: 파란 눈의 호인
   ko_rr:
   zh-TW:
-  zh-CN: 青色眼睛的护人
+  zh-CN: 青之眼护人
 text:
   en: |-
     When this card is Normal Summoned: You can Special Summon 1 Level 1 LIGHT Tuner from your hand. You can target 1 Effect Monster you control; send it to the GY, and if you do, Special Summon 1 "Blue-Eyes" monster from your hand. You can only use this effect of "Protector with Eyes of Blue" once per turn.
@@ -32,7 +32,7 @@ text:
     "파란 눈의 호인"의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환에 성공했을 때에 발동할 수 있다. 패에서 빛 속성 / 레벨 1 튜너 1장을 특수 소환한다. ②: 자신 필드의 효과 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 묘지로 보내고, 패에서 "푸른 눈" 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    「青色眼睛的护人」的②的效果1回合只能使用1次。①：这张卡召唤成功时才能发动。从手卡把1只光属性·1星调整特殊召唤。②：以自己场上1只效果怪兽为对象才能发动。那只怪兽送去墓地，从手卡把1只「青眼」怪兽特殊召唤。
+    此卡名的②效果１回合仅可使用１次。①：此卡召唤成功时可以发动。从手牌将１只光属性・等级１协调特殊召唤。②：以自己场上的１只效果怪兽为对象可以发动。将该怪兽送至墓地，从手牌将１只“青眼”怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Spellcaster / Tuner / Effect
 attribute: LIGHT
@@ -158,6 +158,11 @@ sets:
   ko:
   - set_number: SHVI-KR019
     set_name: Shining Victories
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC006
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
