--- a/data/cards/88069597.yaml
+++ b/data/cards/88069597.yaml
@@ -32,7 +32,7 @@ text:
     이 카드의 컨트롤러는, 자신 스탠바이 페이즈마다 800 LP를 지불한다. 또는 LP를 지불하지 않고 이 카드를 파괴한다. ①: 1턴에 1번, 자신 메인 페이즈에 발동할 수 있다. 자신의 패 / 묘지에서 레벨 4 이하의 "프레데터 플랜츠" 몬스터 1장을 고르고 특수 소환한다. 이 효과로 특수 소환한 몬스터의 효과는 무효화된다.
   zh-TW:
   zh-CN: |-
-    这张卡的控制者在每次自己准备阶段支付800基本分。或者不支付基本分让这张卡破坏。①：1回合1次，自己主要阶段才能发动。从自己的手卡·墓地选1只4星以下的「捕食植物」怪兽特殊召唤。这个效果特殊召唤的怪兽的效果无效化。
+    此卡的控制者在每个自己的准备阶段支付８００LP。或不支付LP而是破坏此卡。①：１回合１次，在自己的主要阶段可以发动。从自己的手牌・墓地挑选１只等级４以下的“捕食植物”怪兽特殊召唤。以此效果特殊召唤的怪兽的效果无效化。
 card_type: Spell
 property: Continuous
 series:
@@ -122,6 +122,11 @@ sets:
     - Super Rare
   - set_number: DP22-KR054
     set_name: 'Duelist Pack: Legend Duelist 5'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC049
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
