--- a/data/cards/88757791.yaml
+++ b/data/cards/88757791.yaml
@@ -32,7 +32,7 @@ text:
     ①: 이 턴에 펜듈럼 소환한 이 카드가 몬스터 존에 존재하는 한, 자신 필드의 "마술사" 펜듈럼 몬스터는 상대의 효과로는 파괴되지 않는다.
   zh-TW:
   zh-CN: |-
-    ①：从手牌将此卡舍弃，以自己灵摆区域1张灵摆刻度与原本数值不同的卡为对象可以发动。该卡的灵摆刻度直至回合结束时为止变为原本的数值。
+    ①：只要在此回合灵摆召唤的此卡存在于怪兽区域，自己场上的“魔术师”灵摆怪兽不会因对手的效果被破坏。
 card_type: Monster
 monster_type_line: Spellcaster / Pendulum / Effect
 attribute: LIGHT
@@ -59,7 +59,7 @@ pendulum_effect:
     ①: 1턴에 1번, 패의 펜듈럼 몬스터 1장을 상대에게 보여주고, 자신의 펜듈럼 존의 "마술사" 카드 1장을 대상으로 하여 발동할 수 있다. 그 "마술사" 카드의 펜듈럼 스케일은 턴 종료시까지, 보여준 펜듈럼 몬스터의 펜듈럼 스케일과 같아진다.
   zh-TW:
   zh-CN: |-
-    ①：另一方自己的灵摆区域有“魔术师”卡或“娱乐伙伴”卡存在的情况下可以发动。破坏此卡，从牌组挑选“慧眼的魔术师”以外的1只“魔术师”灵摆怪兽，放在自己的灵摆区域。
+    ①：１回合１次，将手牌的１只灵摆怪兽出示给对手，以自己灵摆区域的１张“魔术师”卡为对象可以发动。该“魔术师”卡的灵摆刻度直至回合结束时为止，变为与所出示的灵摆怪兽的灵摆刻度相同。
 series:
 - Magician
 images:
