--- a/data/cards/96693371.yaml
+++ b/data/cards/96693371.yaml
@@ -12,7 +12,7 @@ name:
   ko: 비전 히어로 멀티플리 가이
   ko_rr: Bijeon Hieoro Meoltipeulli Gai
   zh-TW:
-  zh-CN: 幻影英雄 倍增人
+  zh-CN: 幻影－英雄 倍增魔侠
 text:
   en: |-
     If you take battle or effect damage while this card is in your GY: You can place this card from your GY in your Spell & Trap Zone as a face-up Continuous Trap. During the Main Phase, if this card is treated as a Continuous Trap: You can Tribute 1 "HERO" monster; Special Summon this card. If this card is Special Summoned from the Spell & Trap Zone: You can make 1 face-up monster on the field gain 800 ATK. You can only use each effect of "Vision HERO Multiply Guy" once per turn.
@@ -32,10 +32,7 @@ text:
     이 카드명의 ①②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신이 전투 / 효과로 데미지를 받았을 경우에 발동할 수 있다. 묘지의 이 카드를 지속 함정 카드로 취급하고 자신의 마법 & 함정 존에 앞면 표시로 놓는다. ②: 이 카드를 지속 함정 카드로 취급할 경우, 서로의 메인 페이즈에, 자신 필드의 "히어로" 몬스터 1장을 릴리스하고 발동할 수 있다. 이 카드를 특수 소환한다. ③: 이 카드가 마법 & 함정 존에서의 특수 소환에 성공했을 경우에 발동할 수 있다. 필드의 몬스터 1장을 골라, 그 공격력을 800 올린다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②③的效果1回合各能使用1次。
-    ①：自己因战斗·效果受到伤害的场合才能发动。墓地的这张卡当作永续陷阱卡使用在自己的魔法与陷阱区域表侧表示放置。
-    ②：这张卡是当作永续陷阱卡使用的场合，双方的主要阶段，把自己场上1只「英雄」怪兽解放才能发动。这张卡特殊召唤。
-    ③：这张卡从魔法与陷阱区域的特殊召唤成功的场合才能发动。选场上1只怪兽，那个攻击力上升800。
+    此卡名的①②③效果１回合仅可各使用１次。①：自己因战斗・效果受到伤害的情况下可以发动。将墓地的此卡视为永续陷阱卡，以表侧表示放在自己的魔法与陷阱区域。②：此卡视为永续陷阱卡的情况下，在双方的主要阶段，解放自己场上的１只“－英雄”怪兽可以发动。将此卡特殊召唤。③：从魔法与陷阱区域将此卡特殊召唤成功的情况下可以发动。挑选场上的１只怪兽，其攻击力上升８００。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: DARK
@@ -102,6 +99,11 @@ sets:
   ko:
   - set_number: CP19-KR006
     set_name: 'Collection Pack: Duelist of Revolution Version'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC022
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
