--- a/data/cards/99913726.yaml
+++ b/data/cards/99913726.yaml
@@ -12,7 +12,7 @@ name:
   ko: 프레데터 플랜츠 드로소필룸 히드라
   ko_rr: Peuredeteo Peullaencheu Deurosopillum Hideura
   zh-TW:
-  zh-CN: 捕食植物 露松水螅龙
+  zh-CN: 捕食植物 露松九头蛇
 text:
   en: |-
     You can Special Summon this card (from your hand or GY) by Tributing 1 monster on either player's field with a Predator Counter. You can only Special Summon "Predaplant Drosophyllum Hydra" once per turn this way. If this card is on the field or in your GY (Quick Effect): You can banish 1 other "Predaplant" monster from your GY, then target 1 face-up monster on the field; it loses 500 ATK. You can only use this effect of "Predaplant Drosophyllum Hydra" once per turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의, ①의 방법에 의한 특수 소환은 1턴에 1번밖에 할 수 없으며, ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드는 자신 또는 상대 필드의 포식 카운터가 놓여진 몬스터 1장을 릴리스했을 경우에 패 / 묘지에서 특수 소환할 수 있다. ②: 이 카드가 필드 / 묘지에 존재할 경우, 이 카드 이외의 자신 묘지의 "프레데터 플랜츠" 몬스터 1장을 제외하고, 필드의 앞면 표시 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터의 공격력은 500 내린다. 이 효과는 상대 턴에도 발동할 수 있다.
   zh-TW:
   zh-CN: |-
-    「捕食植物 露松水螅龙」的作为①的方法的特殊召唤1回合只能有1次，作为②的效果1回合只能使用1次。 ①：这张卡把自己或者对方场上1只有捕食指示物放置的怪兽解放的场合可以从手卡·墓地特殊召唤。 ②：这张卡在场上·墓地存在的场合，把这张卡以外的自己墓地1只「捕食植物」怪兽除外，以场上1只怪兽为对象才能发动。那只怪兽的攻击力下降500。这个效果在对方回合也能发动。
+    此卡名以①方法的特殊召唤１回合仅可进行１次，且②效果１回合仅可使用１次。①：此卡可在解放自己或对手场上１只放有捕食计数物的怪兽的情况下，来从手牌・墓地特殊召唤。②：此卡存在于场上・墓地的情况下，将自己墓地此卡以外的１只“捕食植物”怪兽除外，以场上１只表侧表示怪兽为对象可以发动。该怪兽的攻击力下降５００。此效果在对手回合中也可以发动。
 card_type: Monster
 monster_type_line: Plant / Effect
 attribute: DARK
@@ -127,6 +127,11 @@ sets:
     - Super Rare
   - set_number: DP22-KR050
     set_name: 'Duelist Pack: Legend Duelist 5'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC036
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
