--- a/data/cards/67159705.yaml
+++ b/data/cards/67159705.yaml
@@ -34,7 +34,10 @@ text:
   zh-TW: |-
     1回合1次，可在我方主要阶段时，被视为装备卡装备于我方「電子龍」及记载有「電子龍」的融合怪兽，或解除装备后以表侧攻击表示特殊召唤。1回合1次，降低此效果中装备了此卡的怪兽的攻击力1000点，并可选择以表侧表示存在于场上的1只怪兽破坏。（1只怪兽可装备最多1张联合怪兽。装备怪兽遭到破坏的场合，以此卡代替破坏。）
   zh-CN: |-
-    ①：1回合1次，可以从以下效果中选择1个发动。●以自己场上的1只以“电子龙”为素材的融合怪兽或“电子龙”为对象，将此卡视为装备卡装备到该怪兽上。在装备怪兽因战斗・效果将被破坏的情况下，破坏此卡作为代替。●将作为装备的此卡特殊召唤。②：1回合1次，可以场上的1只表侧表示的怪兽为对象发动。使装备怪兽的攻击力下降1000，将作为对象的表侧表示怪兽破坏。
+    ①：1回合1次，可以从以下效果中选择1个发动。
+    ●以自己场上的1只以"电子龙"为素材的融合怪兽或"电子龙"为对象，将此卡视为装备卡装备到该怪兽上。在装备怪兽因战斗・效果将被破坏的情况下，破坏此卡作为代替。
+    ●将作为装备的此卡特殊召唤。
+    ②：1回合1次，可以场上的1只表侧表示的怪兽为对象发动。使装备怪兽的攻击力下降1000，将作为对象的表侧表示怪兽破坏。
 card_type: Monster
 monster_type_line: Machine / Union / Effect
 attribute: WIND
