--- a/data/cards/86686671.yaml
+++ b/data/cards/86686671.yaml
@@ -48,7 +48,7 @@ text:
     ●자신 묘지의 기계족 / 빛 속성 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 기계족 / 빛 속성 몬스터를 덱으로 되돌린다.
   zh-TW:
   zh-CN: |-
-    此卡名的卡1回合仅可发动1张。①：在自己墓地有“电子龙”存在的情况下，可从以下效果中选择1个发动。此卡发动时，在自己墓地有3只以上“电子龙”存在的情况下，则两者都可以选择。
+    此卡名的卡1回合仅可发动1张。①：在自己墓地有"电子龙"存在的情况下，可从以下效果中选择1个发动。此卡发动时，在自己墓地有3只以上"电子龙"存在的情况下，则两者都可以选择。
     ●从牌组将1只机械族・光属性怪兽加入手牌。
     ●可以自己墓地的1只机械族・光属性怪兽为对象发动。将该机械族・光属性怪兽放回牌组。
 card_type: Spell
