--- a/data/cards/01142880.yaml
+++ b/data/cards/01142880.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 카드명은, 필드 / 묘지에 존재하는 한 "사이버 드래곤"으로 취급한다. ②: 패에서 이 카드 이외의 몬스터 1장을 버리고 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ③: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우, 자신 묘지의, 공격력이나 수비력이 2100 인 기계족 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다. 이 효과의 발동 후, 턴 종료시까지 자신은 기계족 몬스터밖에 특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
-    此卡名的②③效果1回合仅可各使用1次。①：此卡只要存在于场上・墓地，卡名视为“电子龙”。②：从手牌扔掉1只此卡以外的怪兽可以发动。从手牌中将此卡特殊召唤。③：在此卡召唤・特殊召唤成功的情况下，可以自己墓地的1只攻击力或者是守备力为2100的机械族怪兽为对象发动。将该怪兽特殊召唤。此效果发动后，直至回合结束时为止，自己只可特殊召唤机械族怪兽。
+    此卡名的②③效果1回合仅可各使用1次。①：此卡只要存在于场上・墓地，卡名视为"电子龙"。②：从手牌扔掉1只此卡以外的怪兽可以发动。从手牌中将此卡特殊召唤。③：在此卡召唤・特殊召唤成功的情况下，可以自己墓地的1只攻击力或者是守备力为2100的机械族怪兽为对象发动。将该怪兽特殊召唤。此效果发动后，直至回合结束时为止，自己只可特殊召唤机械族怪兽。
 card_type: Monster
 monster_type_line: Machine / Effect
 attribute: LIGHT
