--- a/data/cards/03370104.yaml
+++ b/data/cards/03370104.yaml
@@ -32,7 +32,7 @@ text:
     ①: 이 카드가 몬스터 존에 공격 표시로 존재하는 한, 자신 필드의 기계족 몬스터 1장만을 대상으로 하는 마법 / 함정 카드의 효과는 무효화된다. ②: 이 카드가 전투로 파괴되어 묘지로 보내졌을 때에 발동할 수 있다. 자신은 덱에서 1장 드로우한다.
   zh-TW:
   zh-CN: |-
-    ①：只要此卡在怪兽区域以攻击表示存在，仅以自己场上的1只机械族怪兽为对象的魔法·陷阱卡的效果就将被无效。②：此卡因战斗被破坏且送至墓地时可以发动。自己从牌组中抽1张。
+    ①：只要此卡在怪兽区域以攻击表示存在，仅以自己场上的1只机械族怪兽为对象的魔法・陷阱卡的效果就将被无效。②：此卡因战斗被破坏且送至墓地时可以发动。自己从牌组中抽1张。
 card_type: Monster
 monster_type_line: Machine / Effect
 attribute: FIRE
