--- a/data/cards/05373478.yaml
+++ b/data/cards/05373478.yaml
@@ -32,7 +32,7 @@ text:
     ①: 이 카드의 카드명은, 묘지에 존재하는 한 "사이버 드래곤"으로 취급한다. ②: 1턴에 1번, 패의 마법 카드 1장을 상대에게 보여주고 발동할 수 있다. 이 카드의 카드명은 엔드 페이즈까지 "사이버 드래곤"으로 취급한다. ③: 이 카드가 상대 몬스터에 공격하는 데미지 스텝 동안, 이 카드의 공격력은 300 올린다.
   zh-TW:
   zh-CN: |-
-    ①：此卡只要存在于墓地，卡名视为“电子龙”。②：1回合1次，向对手出示1张手牌的魔法卡后可以发动。此卡的卡名直至结束阶段为止视为“电子龙”。③：此卡攻击对手怪兽的伤害步骤中，此卡的攻击力上升300。
+    ①：此卡只要存在于墓地，卡名视为"电子龙"。②：1回合1次，向对手出示1张手牌的魔法卡后可以发动。此卡的卡名直至结束阶段为止视为"电子龙"。③：此卡攻击对手怪兽的伤害步骤中，此卡的攻击力上升300。
 card_type: Monster
 monster_type_line: Machine / Effect
 attribute: LIGHT
