--- a/data/cards/12607053.yaml
+++ b/data/cards/12607053.yaml
@@ -32,7 +32,7 @@ text:
     ①: 이 턴에, 자신 몬스터는 전투로는 파괴되지 않으며, 자신이 받는 전투 데미지는 0 이 된다.
   zh-TW:
   zh-CN: |-
-    ①：此回合中，自己的怪兽不会因战斗被破坏，自己受到的战斗伤害变为0。
+    ①：此回合，自己的怪兽不会因战斗被破坏，自己受到的战斗伤害变为0。
 card_type: Trap
 property: Normal
 images:
