--- a/data/cards/12670770.yaml
+++ b/data/cards/12670770.yaml
@@ -32,7 +32,7 @@ text:
     발동 후 3번째 자신의 스텐바이 페이즈시에 이 카드를 파괴한다. 1턴에 1번, 필드 위에 "사이버 드래곤"이 존재할 경우에 발동할 수 있다. 덱에서 기계족 / 빛 속성 몬스터 1장을 제외한다. 이 카드가 필드 위에서 묘지로 보내졌을 때, 제외되어 있는 자신의 기계족 / 빛 속성 몬스터를 가능한 만큼 특수 소환하고, 자신의 마법 / 함정 카드를 전부 파괴한다. 이 효과로 특수 소환한 몬스터는 효과를 발동할 수 없다. 이 효과를 발동한 턴에, 자신은 배틀 페이즈를 실행할 수 없다.
   zh-TW:
   zh-CN: |-
-    此卡发动后，将在自己的第3次准备阶段被破坏。①：1回合1次，在场上有“电子龙”存在的情况下可以发动。从牌组将1只机械族・光属性怪兽除外。②：在此卡从场上被送至墓地的情况下发动。尽可能将被除外的自己的机械族・光属性怪兽特殊召唤，将自己场上的所有魔法・陷阱卡破坏。此效果特殊召唤的怪兽不可发动效果。在发动此效果的回合中，自己不可进入战斗阶段。
+    此卡发动后，将在自己的第3次准备阶段被破坏。①：1回合1次，在场上有"电子龙"存在的情况下可以发动。从牌组将1只机械族・光属性怪兽除外。②：在此卡从场上被送至墓地的情况下发动。尽可能将被除外的自己的机械族・光属性怪兽特殊召唤，将自己场上的所有魔法・陷阱卡破坏。此效果特殊召唤的怪兽不可发动效果。在发动此效果的回合中，自己不可进入战斗阶段。
 card_type: Trap
 property: Continuous
 series:
