--- a/data/cards/26439287.yaml
+++ b/data/cards/26439287.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     只要此卡以表侧表示存在于场上时，此卡名称可被视为「電子龍」。
   zh-CN: |-
-    ①：只要此卡存在于怪兽区域，卡名视为“电子龙”。
+    ①：只要此卡存在于怪兽区域，卡名视为"电子龙"。
 card_type: Monster
 monster_type_line: Machine / Effect
 attribute: LIGHT
