--- a/data/cards/48130397.yaml
+++ b/data/cards/48130397.yaml
@@ -32,7 +32,7 @@ text:
     이 카드의 발동에 대하여 마법 / 함정 / 몬스터의 효과는 발동할 수 없다. ①: 패를 1장 버리고 발동할 수 있다. 자신 / 상대 필드에서, 융합 몬스터 카드에 기재된 융합 소재 몬스터를 묘지로 보내고, 그 융합 몬스터 1장을 엑스트라 덱에서 융합 소환한다.
   zh-TW:
   zh-CN: |-
-    应对此卡的发动，魔法・陷阱・怪兽的效果不可发动。①：扔掉1张手牌可以发动。从自己・对手的场上将由融合怪兽卡决定的融合素材怪兽送至墓地，从额外牌组将1只该融合怪兽融合召唤。
+    应对此卡的发动，魔法・陷阱・怪兽的效果不可发动。①：舍弃1张手牌可以发动。从自己・对手的场上将由融合怪兽卡决定的融合素材怪兽送至墓地，从额外牌组将1只该融合怪兽融合召唤。
 card_type: Spell
 property: Quick-Play
 series:
