--- a/data/cards/59281922.yaml
+++ b/data/cards/59281922.yaml
@@ -32,7 +32,7 @@ text:
     ①: 이 카드의 카드명은, 필드 / 묘지에 존재하는 한 "사이버 드래곤"으로 취급한다. ②: 이 카드가 일반 소환에 성공했을 때에 발동할 수 있다. 자신 필드의 모든 "사이버 드래곤"의 레벨을 5 로 한다. 이 효과를 발동하는 턴에, 자신은 기계족 몬스터밖에 특수 소환할 수 없다. ③: 이 카드가 제외되었을 경우, 자신 필드의 "사이버 드래곤" 1장을 대상으로 하고 발동할 수 있다. 이 턴에, 그 몬스터는 전투 / 효과로는 파괴되지 않는다.
   zh-TW:
   zh-CN: |-
-    ①：此卡只要存在于场上・墓地，卡名视为“电子龙”。②：此卡召唤成功时可以发动。将自己场上的所有“电子龙”的等级改成5。发动此效果的回合中，自己仅可特殊召唤机械族怪兽。③：在此卡被除外的情况下，可以自己场上的1只“电子龙”为对象发动。此回合中，该怪兽不会因战斗・效果被破坏。
+    ①：此卡只要存在于场上・墓地，卡名视为"电子龙"。②：此卡召唤成功时可以发动。将自己场上的所有"电子龙"的等级改成5。发动此效果的回合中，自己仅可特殊召唤机械族怪兽。③：在此卡被除外的情况下，可以自己场上的1只"电子龙"为对象发动。此回合中，该怪兽不会因战斗・效果被破坏。
 card_type: Monster
 monster_type_line: Machine / Effect
 attribute: LIGHT
