--- a/data/cards/64514622.yaml
+++ b/data/cards/64514622.yaml
@@ -38,7 +38,8 @@ text:
     이 카드는 묘지 또는 필드 위에 앞면 표시로 존재할 경우, 일반 몬스터로 취급한다. 필드 위에 앞면 표시로 존재하는 이 카드를 일반 소환으로 취급하여 다시 소환하는 것으로, 이 카드는 효과 몬스터로 취급되고 이하의 효과를 얻는다. ●이 카드를 릴리스하고 발동할 수 있다. 자신의 패 / 덱 / 묘지에서 "용왕의 성각인" 이외의 "성각"이라는 이름이 붙은 몬스터 1장을 골라 앞면 수비 표시로 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这张卡在墓地或者场上表侧表示存在的场合，当作通常怪兽使用。可以通过把场上表侧表示存在的这张卡当作通常召唤作再度召唤，这张卡变成当作效果怪兽使用并得到以下效果。●把这张卡解放才能发动。从自己的手卡·卡组·墓地选「龙王之圣刻印」以外的1只名字带有「圣刻」的怪兽表侧守备表示特殊召唤。
+    ①：此卡只要存在于场上・墓地，视为通常怪兽。②：场上视为通常怪兽的此卡可作为通常召唤再召唤１次。该情况下，此卡改视为效果怪兽，获得以下效果。
+    ●解放此卡可以发动。从自己的手牌・牌组・墓地挑选１只“龙王之圣刻印”以外的“圣刻”怪兽，以守备表示特殊召唤。
 card_type: Monster
 monster_type_line: Dragon / Gemini
 attribute: LIGHT
@@ -84,6 +85,11 @@ sets:
   ko:
   - set_number: EXP6-KR003
     set_name: 'Extra Pack: Sword of Knights'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC133
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
