--- a/data/cards/74157028.yaml
+++ b/data/cards/74157028.yaml
@@ -40,7 +40,7 @@ text:
     이 카드의 융합 소환은 상기의 카드로밖에 실행할 수 없다. ①: 이 카드는 1번의 배틀 페이즈 중에 2회 공격할 수 있다.
   zh-TW:
   zh-CN: |-
-    “电子龙”＋“电子龙”
+    "电子龙"＋"电子龙"
     此卡的融合召唤仅可用上述卡进行。①：此卡在1次战斗阶段中可进行2次攻击。
 card_type: Monster
 monster_type_line: Machine / Fusion / Effect
