--- a/data/cards/92773018.yaml
+++ b/data/cards/92773018.yaml
@@ -32,7 +32,7 @@ text:
     상대 몬스터의 공격 선언시에, 자신 필드 위에 앞면 표시로 존재하는 "사이버 드래곤" 및 "사이버 드래곤" 을 융합 소재로 하는 융합 몬스터 1장을 묘지로 보내는 것으로, 상대의 공격 몬스터 1장을 파괴한다.
   zh-TW:
   zh-CN: |-
-    ①：对手怪兽攻击宣言时1次，将自己场上1只表侧表示的“电子龙”或1只记载有以“电子龙”作为融合素材的融合怪兽送至墓地，可以1只该攻击怪兽为对象发动。将该攻击怪兽破坏。
+    ①：对手怪兽攻击宣言时1次，将自己场上1只表侧表示的"电子龙"或1只记载有以"电子龙"作为融合素材的融合怪兽送至墓地，可以1只该攻击怪兽为对象发动。将该攻击怪兽破坏。
 card_type: Trap
 property: Continuous
 series:
