--- a/data/cards/24299458.yaml
+++ b/data/cards/24299458.yaml
@@ -158,6 +158,15 @@ sets:
     rarities:
     - Super Rare
     - Prismatic Secret Rare
+  - set_number: RC04-JP065
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: ROTD-KR065
     set_name: Rise of the Duelist
