--- a/data/rush/16933.yaml
+++ b/data/rush/16933.yaml
@@ -60,6 +60,11 @@ sets:
     set_name: Strongest Battle Deck Tournament 2022 prize card
     rarities:
     - Secret Rare
+  - set_number: RD/LGP1-JP014
+    set_name: Legend Awakening Pack
+    rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: RD/EXT1-KR049
     set_name: Extra Transcend Enhancement Pack
