--- a/data/rush/17217.yaml
+++ b/data/rush/17217.yaml
@@ -41,6 +41,10 @@ sets:
     set_name: Gold Rush Pack
     rarities:
     - Common
+  - set_number: RD/LGP1-JP030
+    set_name: Legend Awakening Pack
+    rarities:
+    - Common
   ko:
   - set_number: RD/GRP1-KR035
     set_name: Grand Rush Pack
