--- a/data/cards/01688285.yaml
+++ b/data/cards/01688285.yaml
@@ -2,11 +2,11 @@ konami_id: 18313
 password: 1688285
 name:
   en: Traptrix Pinguicula
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Fallenstellerin Pinguicula
+  es: Atrapadora Pinguicula
+  fr: Traptrix Pinguicula
+  it: Trappolatrice Pinguicula
+  pt: Armadilhatrix Pinguicula
   ja: シトリスの<ruby>蟲<rt>こ</rt></ruby><ruby>惑<rt>わく</rt></ruby><ruby>魔<rt>ま</rt></ruby>
   ja_romaji: Shitorisu no Kowakuma
   ko:
@@ -17,11 +17,21 @@ text:
   en: |-
     2 Level 4 monsters
     While this card has material, it is unaffected by Trap effects and the activated effects of other monsters with the same Type as this card's material. You can only use each of the following effects of "Traptrix Pinguicula" once per turn. You can detach 1 material from this card; add 1 "Traptrix" monster from your Deck to your hand. If a monster(s) owned by your opponent is sent to the GY, or banished, by a card effect (except during the Damage Step): You can attach 1 of those monsters to this card as material.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    2 Monster der Stufe 4
+    Solange diese Karte Material hat, bleibt sie von Falleneffekten und aktivierten Effekten anderer Monster mit demselben Typ wie das Material dieser Karte unberührt. Du kannst jeden der folgenden Effekte von „Fallenstellerin Pinguicula“ nur einmal pro Spielzug verwenden. Du kannst 1 Material von dieser Karte abhängen; füge deiner Hand 1 „Fallenstellerin“-Monster von deinem Deck hinzu. Falls ein oder mehr Monster, die dein Gegner besitzt, durch einen Karteneffekt auf den Friedhof gelegt oder verbannt werden (außer während des Damage Steps): Du kannst 1 jener Monster als Material an diese Karte anhängen.
+  es: |-
+    2 monstruos de Nivel 4
+    Mientras esta carta tenga material, no es afectada por efectos de Trampas y los efectos activados de otros monstruos con el mismo Tipo que el material de esta carta. Sólo puedes usar cada uno de los siguientes efectos de "Atrapadora Pinguicula" una vez por turno. Puedes desacoplar 1 material de esta carta; añade a tu mano 1 monstruo "Atrapadora" en tu Deck. Si uno o más monstruos propiedad de tu adversario son mandados al Cementerio, o desterrados, por efecto de una carta (excepto durante el Damage Step): puedes acoplar 1 de esos monstruos a esta carta como material.
+  fr: |-
+    2 monstres de Niveau 4
+    Tant que cette carte a du Matériel, elle n'est affectée ni par des effets de Piège ni par les effets activés d'autres monstres du même Type que le Matériel de cette carte. Vous ne pouvez utiliser chacun des effets suivants de "Traptrix Pinguicula" qu'une fois par tour. Vous pouvez détacher 1 Matériel de cette carte ; ajoutez 1 monstre "Traptrix" depuis votre Deck à votre main. Si un ou plusieurs monstres dont le propriétaire est votre adversaire sont envoyés au Cimetière ou bannis par un effet de carte (sauf durant la Damage Step) : vous pouvez attacher 1 de ces monstres à cette carte comme Matériel.
+  it: |-
+    2 mostri di Livello 4
+    Mentre questa carta ha materiale, è immune agli effetti delle Trappole e agli effetti attivati degli altri mostri con lo stesso Tipo del materiale di questa carta. Puoi utilizzare ognuno dei seguenti effetti di "Trappolatrice Pinguicula" una sola volta per turno. Puoi staccare 1 materiale da questa carta; aggiungi 1 mostro "Trappolatrice" dal tuo Deck alla tua mano. Se uno o più mostri di proprietà del tuo avversario vengono mandati al Cimitero, o banditi, dall'effetto di una carta (eccetto durante il Damage Step): puoi attaccare 1 di quei mostri a questa carta come materiale.
+  pt: |-
+    2 monstros de Nível 4
+    Enquanto este card tiver matéria, ele não é afetado por efeitos de Armadilha e pelos efeitos ativados de outros monstros com o mesmo Tipo que as matérias deste card. Você só pode usar cada um dos seguintes efeitos de "Armadilhatrix Pinguicula" uma vez por turno. Você pode desassociar 1 matéria deste card; adicione 1 monstro "Armadilhatrix" do seu Deck à sua mão. Se um ou mais monstros dos quais seu oponente seja dono forem enviados para o Cemitério, ou banidos, por um efeito de card (exceto durante a Etapa de Dano): você pode associar 1 desses monstros a este card como matéria.
   ja: |-
     レベル４モンスター×２
     このカード名の②③の効果はそれぞれ１ターンに１度しか使用できない。①：Ｘ素材を持っているこのカードは、このカードがＸ素材としているモンスターと同じ種族のモンスター（このカードを除く）が発動した効果及び罠カードの効果を受けない。②：このカードのＸ素材を１つ取り除いて発動できる。デッキから「蟲惑魔」モンスター１体を手札に加える。③：元々の持ち主が相手となるモンスターが効果で、墓地へ送られた場合または除外された場合に発動できる。その内の１体を選んでこのカードのＸ素材とする。
