--- a/data/cards/75294187.yaml
+++ b/data/cards/75294187.yaml
@@ -2,11 +2,11 @@ konami_id: 18312
 password: 75294187
 name:
   en: Terrifying Trap Hole Nightmare
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Schrecklicher Fallgruben-Albtraum
+  es: Aterradora Pesadilla del Agujero Trampa
+  fr: Trappe Cauchemar Terrifiant
+  it: Incubo Buco Trappola Terrificante
+  pt: Aterrorizante Pesadelo Buraco Armadilha
   ja: <ruby>狂<rt>きょう</rt></ruby><ruby>惑<rt>わく</rt></ruby>の<ruby>落<rt>お</rt></ruby>とし<ruby>穴<rt>あな</rt></ruby>
   ja_romaji: Kyōwaku no Otoshiana
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     If your opponent has Special Summoned a monster(s) this turn: Target 1 monster your opponent controls with 2000 or more ATK; destroy it, then if you have a "Hole" Normal Trap in your GY, you can banish 1 monster from your opponent's GY. You can only activate 1 "Terrifying Trap Hole Nightmare" per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls dein Gegner in diesem Spielzug ein oder mehr Monster als Spezialbeschwörung beschworen hat: Wähle 1 Monster mit 2000 oder mehr ATK, das dein Gegner kontrolliert; zerstöre es, dann, falls du eine Normale „Fallgrube“-Falle in deinem Friedhof hast, kannst du 1 Monster vom Friedhof deines Gegners verbannen. Du kannst nur 1 „Schrecklicher Fallgruben-Albtraum“ pro Spielzug aktivieren.
+  es: |-
+    Si este turno tu adversario ha Invocado uno o más monstruos de Modo Especial: selecciona 1 monstruo con 2000 ATK o más que controle tu adversario; destrúyelo y después, si tienes una Trampa Normal "Agujero" en tu Cementerio, puedes desterrar 1 monstruo en el Cementerio de tu adversario. Sólo puedes activar 1 "Aterradora Pesadilla del Agujero Trampa" por turno.
+  fr: |-
+    Ce tour, si votre adversaire a Invoqué Spécialement un ou plusieurs monstres : ciblez 1 monstre contrôlé par votre adversaire avec min. 2000 ATK ; détruisez-le, puis si vous avez un Piège Normal "Trappe" dans votre Cimetière, vous pouvez bannir 1 monstre depuis le Cimetière de votre adversaire. Vous ne pouvez activer qu'1 "Trappe Cauchemar Terrifiant" par tour.
+  it: |-
+    Se il tuo avversario ha Evocato Specialmente uno o più mostri in questo turno: scegli come bersaglio 1 mostro controllato dal tuo avversario con ATK 2000 o superiore; distruggilo, poi se hai una Trappola Normale "Buco" nel tuo Cimitero, puoi bandire 1 mostro dal Cimitero del tuo avversario. Puoi attivare solo 1 "Incubo Buco Trappola Terrificante" per turno.
+  pt: |-
+    Se seu oponente tiver Invocado um ou mais monstros por Invocação-Especial neste turno: escolha 1 monstro que seu oponente controla com 2000 ou mais de ATK; destrua-o e, depois, se você tiver uma Armadilha Normal "Buraco" no seu Cemitério, você pode banir 1 monstro do Cemitério do seu oponente. Você só pode ativar 1 "Aterrorizante Pesadelo Buraco Armadilha" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：相手がモンスターの特殊召喚に成功したターン、相手フィールドの攻撃力２０００以上のモンスター１体を対象として発動できる。そのモンスターを破壊する。その後、自分の墓地に「ホール」通常罠カードまたは「落とし穴」通常罠カードが存在する場合、相手の墓地からモンスター１体を選んで除外できる。
   ko:
