--- a/data/cards/48183890.yaml
+++ b/data/cards/48183890.yaml
@@ -2,11 +2,11 @@ konami_id: 18314
 password: 48183890
 name:
   en: Traptrix Atypus
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Fallenstellerin Atypus
+  es: Atrapadora Atypus
+  fr: Traptrix Atypus
+  it: Trappolatrice Atypus
+  pt: Armadilhatrix Atypus
   ja: アティプスの<ruby>蟲<rt>こ</rt></ruby><ruby>惑<rt>わく</rt></ruby><ruby>魔<rt>ま</rt></ruby>
   ja_romaji: Atipusu no Kowakuma
   ko:
@@ -18,11 +18,26 @@ text:
     2+ monsters, including an Insect or Plant monster
     This Link Summoned card is unaffected by Trap effects. All "Traptrix" monsters you control gain 1000 ATK while you have a Normal Trap in your GY. Once per turn: You can target face-up cards your opponent controls, up to the number of Insect and Plant monsters you control; negate their effects (until the end of this turn), then you can apply this effect.
      ● Banish 1 Normal Trap from your GY, and if you do, destroy 1 of those targeted face-up cards.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    2+ Monster, darunter ein Insekt- oder Pflanze-Monster
+    Diese als Linkbeschwörung beschworene Karte bleibt von Falleneffekten unberührt. Alle „Fallenstellerin“-Monster, die du kontrollierst, erhalten 1000 ATK, solange du eine Normale Falle in deinem Friedhof hast. Einmal pro Spielzug: Du kannst offene Karten, die dein Gegner kontrolliert, bis zur Anzahl der Insekt- und Pflanze-Monster wählen, die du kontrollierst; annulliere ihre Effekte (bis zum Ende dieses Spielzugs), dann kannst du diesen Effekt ausführen.
+    ● Verbanne 1 Normale Falle von deinem Friedhof und falls du dies tust, zerstöre 1 jener als Ziel gewählten offenen Karten.
+  es: |-
+    2+ monstruos, incluyendo un monstruo Insecto o Planta
+    Esta carta Invocada por Enlace no es afectada por efectos de Trampas. Mientras tengas una Trampa Normal en tu Cementerio todos los monstruos "Atrapadora" que controles ganan 1000 ATK. Una vez por turno: puedes seleccionar hasta tantas cartas boca arriba que controle tu adversario como el número de monstruos Insecto y Planta que controles; niega sus efectos (hasta el final de este turno), y después puedes aplicar este efecto.
+    ● Destierra 1 Trampa Normal en tu Cementerio y, si lo haces, destruye 1 de esas cartas boca arriba seleccionadas.
+  fr: |-
+    2+ monstres (un monstre Insecte ou Plante inclus)
+    Cette carte Invoquée par Lien n'est pas affectée par des effets de Piège. Tous les monstres "Traptrix" que vous contrôlez gagnent 1000 ATK tant que vous avez un Piège Normal dans votre Cimetière. Une fois par tour : vous pouvez cibler un nombre de cartes face recto contrôlées par votre adversaire, inférieur ou égal au nombre de monstres Insecte et Plante que vous contrôlez ; annulez leurs effets (jusqu'à la fin de ce tour), puis vous pouvez appliquer cet effet.
+    ● Bannissez 1 Piège Normal depuis votre Cimetière, et si vous le faites, détruisez 1 de ces cartes face recto ciblées.
+  it: |-
+    2+ mostri, compreso un mostro Insetto o Pianta
+    Questa carta Evocata Link è immune agli effetti delle Trappole. Tutti i mostri "Trappolatrice" che controlli guadagnano 1000 ATK mentre hai una Trappola Normale nel tuo Cimitero. Una volta per turno: puoi scegliere come bersaglio carte scoperte controllate dal tuo avversario fino al numero di mostri Insetto e Pianta che controlli; annulla i loro effetti (fino alla fine di questo turno), poi puoi applicare questo effetto.
+    ● Bandisci 1 Trappola Normale dal tuo Cimitero e, se lo fai, distruggi 1 di quelle carte scelte come bersaglio scoperte.
+  pt: |-
+    2+ monstros, incluindo um monstro Inseto ou Planta
+    Este card Invocado por Invocação-Link não é afetado por efeitos de Armadilha. Todos os monstros "Armadilhatrix" que você controla ganham 1000 de ATK enquanto você tiver uma Armadilha Normal no seu Cemitério. Uma vez por turno: você pode escolher cards com a face para cima que seu oponente controla até o número de monstros Inseto e Planta que você controla; negue seus efeitos (até o final deste turno) e, depois, você pode aplicar este efeito.
+    ● Bana 1 Armadilha Normal do seu Cemitério e, se isso acontecer, destrua 1 desses cards alvo com a face para cima.
   ja: |-
     昆虫族・植物族モンスターを含むモンスター２体以上
     ①：リンク召喚したこのカードは罠カードの効果を受けない。②：自分の墓地に通常罠カードが存在する限り、自分フィールドの「蟲惑魔」モンスターの攻撃力は１０００アップする。③：１ターンに１度、自分フィールドの昆虫族・植物族モンスターの数まで、相手フィールドの表側表示のカードを対象として発動できる。そのカードの効果をターン終了時まで無効にする。その後、以下を適用できる。●自分の墓地から通常罠カード１枚を除外し、対象の表側表示のカードの内１枚を選んで破壊する。
