--- a/data/cards/49027020.yaml
+++ b/data/cards/49027020.yaml
@@ -2,11 +2,11 @@ konami_id: 18308
 password: 49027020
 name:
   en: Traptrix Pudica
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Fallenstellerin Pudica
+  es: Atrapadora Pudica
+  fr: Traptrix Pudica
+  it: Trappolatrice Pudica
+  pt: Armadilhatrix Pudica
   ja: プティカの<ruby>蟲<rt>こ</rt></ruby><ruby>惑<rt>わく</rt></ruby><ruby>魔<rt>ま</rt></ruby>
   ja_romaji: Putika no Kowakuma
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     Unaffected by the effects of "Hole" Normal Traps. You can only use each of the following effects of "Traptrix Pudica" once per turn. When this card is Normal Summoned: You can add 1 "Traptrip Garden" from your Deck to your hand. If this card is Special Summoned: You can target 1 Special Summoned monster your opponent controls; banish it, also during the next Standby Phase, your opponent can Special Summon 1 of their banished monsters.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Bleibt von den Effekten von Normalen „Fallgrube“-Fallen unberührt. Du kannst jeden der folgenden Effekte von „Fallenstellerin Pudica“ nur einmal pro Spielzug verwenden. Wenn diese Karte als Normalbeschwörung beschworen wird: Du kannst deiner Hand 1 „Ausflug in den Fallensektor“ von deinem Deck hinzufügen. Falls diese Karte als Spezialbeschwörung beschworen wird: Du kannst 1 als Spezialbeschwörung beschworenes Monster wählen, das dein Gegner kontrolliert; verbanne es, zusätzlich kann dein Gegner während der nächsten Standby Phase 1 seiner verbannten Monster als Spezialbeschwörung beschwören.
+  es: |-
+    No es afectada por los efectos de Trampas Normales "Agujero". Sólo puedes usar cada uno de los siguientes efectos de "Atrapadora Pudica" una vez por turno. Cuando esta carta es Invocada de Modo Normal: puedes añadir a tu mano 1 "Jardín Atrapador" en tu Deck. Si esta carta es Invocada de Modo Especial: puedes seleccionar 1 monstruo Invocado de Modo Especial que controle tu adversario; destiérralo, y además durante la próxima Standby Phase, tu adversario puede Invocar de Modo Especial 1 de sus monstruos desterrados.
+  fr: |-
+    Non affectée par les effets de Pièges Normaux "Trappe". Vous ne pouvez utiliser chacun des effets suivants de "Traptrix Pudica" qu'une fois par tour. Lorsque cette carte est Invoquée Normalement : vous pouvez ajouter 1 "Jardin Traptrip" depuis votre Deck à votre main. Si cette carte est Invoquée Spécialement : vous pouvez cibler 1 monstre Invoqué Spécialement contrôlé par votre adversaire ; bannissez-le, et aussi durant la prochaine Standby Phase, votre adversaire peut Invoquer Spécialement 1 de ses monstres bannis.
+  it: |-
+    Immune agli effetti delle Trappole Normali "Buco". Puoi utilizzare ognuno dei seguenti effetti di "Trappolatrice Pudica" una sola volta per turno. Quando questa carta viene Evocata Normalmente: puoi aggiungere 1 "Giardino Trappolatour" dal tuo Deck alla tua mano. Se questa carta viene Evocata Specialmente: puoi scegliere come bersaglio 1 mostro Evocato Specialmente controllato dal tuo avversario; bandiscilo, inoltre durante la prossima Standby Phase, il tuo avversario può Evocare Specialmente 1 dei suoi mostri banditi.
+  pt: |-
+    Não é afetado pelos efeitos de Armadilhas Normais "Buraco". Você só pode usar cada um dos seguintes efeitos de "Armadilhatrix Pudica" uma vez por turno. Quando este card for Invocado por Invocação-Normal: você pode adicionar 1 "Jardim Armadilhatrip" do seu Deck à sua mão. Se este card for Invocado por Invocação-Especial: você pode escolher 1 monstro Invocado por Invocação-Especial que seu oponente controla; bana-o e, além disso, durante a próxima Fase de Apoio, seu oponente pode Invocar por Invocação-Especial 1 dos monstros banidos dele.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚に成功した時に発動できる。デッキから「蟲惑の園」１枚を手札に加える。②：このカードが特殊召喚に成功した場合、相手フィールドの特殊召喚されたモンスター１体を対象として発動できる。そのモンスターを除外する。次のスタンバイフェイズに、相手は除外されている自身のモンスター１体を選んで特殊召喚できる。③：このカードはモンスターゾーンに存在する限り、「ホール」通常罠カード及び「落とし穴」通常罠カードの効果を受けない。
   ko:
