--- a/data/cards/74577599.yaml
+++ b/data/cards/74577599.yaml
@@ -2,11 +2,11 @@ konami_id: 18315
 password: 74577599
 name:
   en: Traptrix Holeutea
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Fallgruben-Lutea der Fallenstellerin
+  es: Atrapadora Agujerotea
+  fr: Traptrix Trappelutea
+  it: Trappolatrice Bucolutea
+  pt: Armadilhatrix Buracotea
   ja: ホールティアの<ruby>蟲<rt>こ</rt></ruby><ruby>惑<rt>わく</rt></ruby><ruby>魔<rt>ま</rt></ruby>
   ja_romaji: Hōrutia no Kowakuma
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     You can activate this card the turn it was Set, by discarding 1 Normal Trap. Special Summon this card in Defense Position as a Normal Monster (Plant/EARTH/Level 4/ATK 400/DEF 2400). (This card is NOT treated as a Trap.) You can banish this card from your GY, then target 1 "Traptrix" monster in your GY; Special Summon it. You can only use 1 "Traptrix Holeutea" effect per turn, and only once that turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Du kannst diese Karte in dem Spielzug aktivieren, in dem sie gesetzt wurde, indem du 1 Normale Falle abwirfst. Beschwöre diese Karte als Spezialbeschwörung als Normales Monster (Pflanze/ERDE/Stufe 4/ATK 400/DEF 2400) in die Verteidigungsposition. (Diese Karte wird NICHT als Falle behandelt.) Du kannst diese Karte von deinem Friedhof verbannen und dann 1 „Fallenstellerin“-Monster in deinem Friedhof wählen; beschwöre es als Spezialbeschwörung. Du kannst nur 1 Effekt von „Fallgruben-Lutea der Fallenstellerin“ pro Spielzug verwenden und in jenem Spielzug nur einmal.
+  es: |-
+    Puedes activar esta carta en el turno en el que fue Colocada, descartando 1 Trampa Normal. Invoca esta carta de Modo Especial en Posición de Defensa como un Monstruo Normal (Planta/TIERRA/Nivel 4/ATK 400/DEF 2400). (Esta carta NO se trata como una Trampa). Puedes desterrar esta carta en tu Cementerio, y después seleccionar 1 monstruo "Atrapadora" en tu Cementerio; Invócalo de Modo Especial. Sólo puedes usar 1 efecto de "Atrapadora Agujerotea" por turno, y sólo una vez ese turno.
+  fr: |-
+    Vous pouvez activer cette carte le tour où elle a été Posée, en défaussant 1 Piège Normal. Invoquez Spécialement cette carte en Position de Défense comme un Monstre Normal (Plante/TERRE/Niveau 4/ATK 400/DEF 2400). (Cette carte N'EST PAS traitée comme un Piège.) Vous pouvez bannir cette carte depuis votre Cimetière, puis ciblez 1 monstre "Traptrix" dans votre Cimetière ; Invoquez-le Spécialement. Vous ne pouvez utiliser qu'1 effet de "Traptrix Trappelutea" par tour, et uniquement une fois le tour.
+  it: |-
+    Puoi attivare questa carta nel turno in cui è stata Posizionata, scartando 1 Trappola Normale. Evoca Specialmente questa carta in Posizione di Difesa come Mostro Normale (Pianta/TERRA/Livello 4/ATK 400/DEF 2400). (Questa carta NON viene considerata come una Trappola.) Puoi bandire questa carta dal tuo Cimitero, poi scegliere come bersaglio 1 mostro "Trappolatrice" nel tuo Cimitero; Evocalo Specialmente. Puoi utilizzare solo 1 effetto di "Trappolatrice Bucolutea" per turno, e solo una volta in quel turno.
+  pt: |-
+    Você pode ativar este card no turno em que foi Baixado ao descartar 1 Armadilha Normal. Invoque este card por Invocação-Especial em Posição de Defesa como um Monstro Normal (Planta/TERRA/Nível 4/ATK 400/DEF 2400). (Este card NÃO é considerado como uma Armadilha.) Você pode banir este card do seu Cemitério e, depois, escolha 1 monstro "Armadilhatrix" no seu Cemitério; Invoque-o por Invocação-Especial. Você só pode usar 1 efeito de "Armadilhatrix Buracotea" por turno e apenas uma vez por turno.
   ja: |-
     このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。このカードは手札から通常罠カード１枚を捨て、セットしたターンに発動する事もできる。①：このカードは発動後、通常モンスター（植物族・地・星４・攻４００／守２４００）となり、モンスターゾーンに守備表示で特殊召喚する（罠カードとしては扱わない）。②：墓地のこのカードを除外し、自分の墓地の「蟲惑魔」モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
   ko:
