--- a/data/cards/75416738.yaml
+++ b/data/cards/75416738.yaml
@@ -2,11 +2,11 @@ konami_id: 18309
 password: 75416738
 name:
   en: Traptrix Arachnocampa
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Fallenstellerin Arachnocampa
+  es: Atrapadora Aracnocampa
+  fr: Traptrix Arachnocampa
+  it: Trappolatrice Arachnocampa
+  pt: Armadilhatrix Aracnocampa
   ja: キノの<ruby>蟲<rt>こ</rt></ruby><ruby>惑<rt>わく</rt></ruby><ruby>魔<rt>ま</rt></ruby>
   ja_romaji: Kino no Kowakuma
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     Unaffected by the effects of "Hole" Normal Traps. The first time each Set card in your Spell & Trap Zone would be destroyed by card effect each turn, it is not destroyed. During the Main Phase, if you control a "Traptrix" monster (Quick Effect): You can Special Summon this card from your hand, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Insect or Plant monsters. You can only use this effect of "Traptrix Arachnocampa" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Bleibt von den Effekten von Normalen „Fallgrube“-Fallen unberührt. Das erste Mal in jedem Spielzug, dass jede gesetzte Karte in deiner Zauber- & Fallenzone durch einen Karteneffekt zerstört würde, wird sie nicht zerstört. Während der Main Phase, falls du ein „Fallenstellerin“-Monster kontrollierst (Schnelleffekt): Du kannst diese Karte als Spezialbeschwörung von deiner Hand beschwören, zusätzlich kannst du für den Rest dieses Spielzugs keine Monster als Spezialbeschwörung vom Extra Deck beschwören, außer Insekt- und Pflanze-Monstern. Du kannst diesen Effekt von „Fallenstellerin Arachnocampa“ nur einmal pro Spielzug verwenden.
+  es: |-
+    No es afectada por los efectos de Trampas Normales "Agujero". La primera vez que cada carta Colocada en tu Zona de Magia y Trampas fuera a ser destruida por el efecto de una carta cada turno, no es destruida. Durante la Main Phase, si controlas un monstruo "Atrapadora" (Efecto Rápido): puedes Invocar esta carta de Modo Especial desde tu mano, y además no puedes Invocar monstruos de Modo Especial desde el Deck Extra por el resto de este turno, excepto monstruos Insecto o Planta. Sólo puedes usar este efecto de "Atrapadora Aracnocampa" una vez por turno.
+  fr: |-
+    Non affectée par les effets de Pièges Normaux "Trappe". La première fois que chaque carte Posée dans votre Zone Magie & Piège va être détruite par un effet de carte chaque tour, elle n'est pas détruite. Durant la Main Phase, si vous contrôlez un monstre "Traptrix" (Effet Rapide) : vous pouvez Invoquer Spécialement cette carte depuis votre main, et aussi, vous ne pouvez pas Invoquer Spécialement de monstres (monstres Insecte ou Plante exclus) depuis l'Extra Deck le reste de ce tour. Vous ne pouvez utiliser cet effet de "Traptrix Arachnocampa" qu'une fois par tour.
+  it: |-
+    Immune agli effetti delle Trappole Normali "Buco". La prima volta che ogni carta Posizionata nella tua Zona Magie & Trappole sta per essere distrutta dall'effetto di una carta ogni turno, non viene distrutta. Durante la Main Phase, se controlli un mostro "Trappolatrice" (Effetto Rapido): puoi Evocare Specialmente questa carta dalla tua mano, inoltre non puoi Evocare Specialmente mostri dall'Extra Deck per il resto di questo turno, eccetto mostri Insetto o Pianta. Puoi utilizzare questo effetto di "Trappolatrice Arachnocampa" una sola volta per turno.
+  pt: |-
+    Não é afetado pelos efeitos de Armadilhas Normais "Buraco". Na primeira vez que cada card Baixado na sua Zona de Magias & Armadilhas seria destruído por um efeito de card a cada turno, ele não é destruído. Durante a Fase Principal, se você controlar um monstro "Armadilhatrix" (Efeito Rápido): você pode Invocar este card por Invocação-Especial da sua mão e, além disso, você não pode Invocar monstros por Invocação-Especial do Deck Adicional pelo resto deste turno, exceto monstros Inseto ou Planta. Você só pode usar este efeito de "Armadilhatrix Aracnocampa" uma vez por turno.
   ja: |-
     このカード名の①の効果は１ターンに１度しか使用できない。①：自分フィールドに「蟲惑魔」モンスターが存在する場合、自分・相手のメインフェイズに発動できる。このカードを手札から特殊召喚する。この効果の発動後、ターン終了時まで自分は昆虫族・植物族モンスターしかＥＸデッキから特殊召喚できない。②：このカードはモンスターゾーンに存在する限り、「ホール」通常罠カード及び「落とし穴」通常罠カードの効果を受けない。③：自分の魔法＆罠ゾーンにセットされたカードはそれぞれ１ターンに１度だけ効果では破壊されない。
   ko:
