--- a/rush.yaml
+++ b/rush.yaml
@@ -73777,7 +73777,7 @@ name:
   it:
   pt:
   ja: ギャラクティカ・ジャメイヴュ
-  ja_romaji: Gyarakutika Jameivū
+  ja_romaji: Gyarakutika Jameivyu
   ko: 갤럭티카 자메이뷰
   ko_rr:
   zh-TW:
