--- a/data/cards/51365514.yaml
+++ b/data/cards/51365514.yaml
@@ -32,7 +32,7 @@ text:
     패에서 "성각"이라는 이름이 붙은 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    从手卡把1只名字带有「圣刻」的怪兽特殊召唤。
+    ①：从手牌将１只“圣刻”怪兽特殊召唤。
 card_type: Spell
 property: Normal
 series:
@@ -90,6 +90,11 @@ sets:
   ko:
   - set_number: GAOV-KR057
     set_name: Galactic Overlord
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC146
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
