--- a/data/cards/03292267.yaml
+++ b/data/cards/03292267.yaml
@@ -12,7 +12,7 @@ name:
   ko: 성각천룡－에네아드
   ko_rr: Seonggakcheonnyong - Eneadeu
   zh-TW:
-  zh-CN: 圣刻天龙-九神龙
+  zh-CN: 圣刻天龙－九柱神
 text:
   en: |-
     2 Level 8 monsters
@@ -40,8 +40,8 @@ text:
     ①: 1턴에 1번, 자신의 필드 / 묘지의 카드 또는 제외되어 있는 자신의 카드를 대상으로 하는 마법 / 함정 / 몬스터의 효과를 상대가 발동했을 때, 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 그 발동을 무효로 하고 파괴한다.
   zh-TW:
   zh-CN: |-
-    8星怪兽×2
-    ①：1回合1次，以自己的场上·墓地的卡或者除外的自己的卡为对象的魔法·陷阱·怪兽的效果由对方发动时，把这张卡1个超量素材取除才能发动。那个发动无效并破坏。
+    等级８怪兽×２
+    ①：１回合１次，对手发动以自己场上・墓地的卡或自己被除外的卡为对象的魔法・陷阱・怪兽的效果时，去除此卡的１个超量素材可以发动。将该发动无效并破坏。
 card_type: Monster
 monster_type_line: Dragon / Xyz / Effect
 attribute: LIGHT
@@ -91,6 +91,12 @@ sets:
     set_name: Selection 10
     rarities:
     - Super Rare
+    - Secret Rare
+  zh-CN:
+  - set_number: CL02-SC144
+    set_name: Classic Pack 02
+    rarities:
+    - Ultra Rare
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
