--- a/data/cards/04022819.yaml
+++ b/data/cards/04022819.yaml
@@ -12,7 +12,7 @@ name:
   ko: 성각룡－아세트 드래곤
   ko_rr:
   zh-TW:
-  zh-CN: 圣刻龙-艾西龙
+  zh-CN: 圣刻龙－阿赛特龙
 text:
   en: |-
     You can Normal Summon this card without Tributing, but its original ATK becomes 1000. Once per turn: You can target 1 face-up Dragon Normal Monster on the field; the Levels of all face-up "Hieratic" monsters currently on the field become the Level of that monster, until the End Phase. When this card is Tributed: Special Summon 1 Dragon Normal Monster from your hand, Deck, or GY, and make its ATK/DEF 0.
@@ -32,7 +32,7 @@ text:
     이 카드는 릴리스 없이 일반 소환할 수 있다. 이 방법으로 일반 소환한 이 카드의 원래 공격력은 1000 이 된다. 1턴에 1번, 필드 위의 드래곤족 일반 몬스터 1장을 선택하고 발동할 수 있다. 필드 위의 모든 "성각"이라는 이름이 붙은 몬스터의 레벨은 엔드 페이즈시까지 선택한 몬스터와 같은 레벨이 된다. 또한, 이 카드가 릴리스되었을 때, 자신의 패 / 덱 / 묘지에서 드래곤족 일반 몬스터 1장을 고르고, 공격력 / 수비력을 0으로 하여 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这张卡可以不用解放作召唤。这个方法召唤的这张卡的原本攻击力变成1000。1回合1次，选择场上1只龙族的通常怪兽才能发动。场上的全部名字带有「圣刻」的怪兽的等级直到结束阶段时变成和选择的怪兽相同等级。此外，这张卡被解放时，从自己的手卡·卡组·墓地选1只龙族的通常怪兽，攻击力·守备力变成0特殊召唤。
+    ①：此卡无需解放即可召唤。②：以此卡的①方法召唤的此卡的原本攻击力变为１０００。③：１回合１次，以场上的１只龙族通常怪兽为对象可以发动。场上的所有“圣刻”怪兽的等级直至回合结束时为止，变为与对象怪兽相同。④：此卡被解放的情况下发动。从自己的手牌・牌组・墓地挑选１只龙族通常怪兽，将其攻击力・守备力改成０并特殊召唤。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: LIGHT
@@ -96,6 +96,11 @@ sets:
     set_name: Galactic Overlord
     rarities:
     - Common
+  zh-CN:
+  - set_number: CL02-SC136
+    set_name: Classic Pack 02
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
