--- a/data/cards/30794966.yaml
+++ b/data/cards/30794966.yaml
@@ -12,7 +12,7 @@ name:
   ko: 성각룡-우시르 드래곤
   ko_rr:
   zh-TW:
-  zh-CN: 圣刻龙-奥西龙
+  zh-CN: 圣刻龙－乌西尔龙
 text:
   en: |-
     You can Special Summon this card (from your hand) by banishing 1 LIGHT Dragon-Type monster and 1 Dragon-Type Normal Monster from your Graveyard. If this face-up card on the field would be destroyed, you can Tribute 1 face-up "Hieratic" monster instead, except this card.
@@ -32,7 +32,7 @@ text:
     이 카드는 자신 묘지의 드래곤족 / 빛 속성 몬스터와 드래곤족 일반 몬스터를 1장씩 게임에서 제외하고, 패에서 특수 소환할 수 있다. 필드 위의 이 카드가 파괴될 경우, 대신에 이 카드 이외의 자신 필드 위에 앞면 표시로 존재하는 "성각" 이라는 이름이 붙은 몬스터 1장을 릴리스할 수 있다.
   zh-TW:
   zh-CN: |-
-    这张卡可以把自己墓地的龙族·光属性怪兽和龙族的通常怪兽各1只从游戏中除外，从手卡特殊召唤。场上的这张卡被破坏的场合，可以作为代替把这张卡以外的自己场上表侧表示存在的1只名字带有「圣刻」的怪兽解放。
+    ①：此卡可从自己的墓地将龙族・光属性怪兽和龙族通常怪兽各１只除外，来从手牌特殊召唤。②：场上的此卡将被破坏的情况下，可解放自己场上此卡以外的１只表侧表示“圣刻”怪兽作为代替。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: LIGHT
@@ -75,6 +75,11 @@ sets:
     set_name: Galactic Overlord
     rarities:
     - Rare
+  zh-CN:
+  - set_number: CL02-SC140
+    set_name: Classic Pack 02
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
