--- a/data/cards/31516413.yaml
+++ b/data/cards/31516413.yaml
@@ -12,7 +12,7 @@ name:
   ko: 성각룡－네프테 드래곤
   ko_rr:
   zh-TW:
-  zh-CN: 圣刻龙-奈芙龙
+  zh-CN: 圣刻龙－奈芙蒂龙
 text:
   en: |-
     You can Special Summon this card (from your hand) by Tributing 1 "Hieratic" monster. Once per turn: You can Tribute 1 "Hieratic" monster, except this card, from your hand or your side of the field, to target 1 monster your opponent controls; destroy that target. When this card is Tributed: Special Summon 1 Dragon-Type Normal Monster from your hand, Deck, or Graveyard, and make its ATK and DEF 0.
@@ -32,7 +32,7 @@ text:
     이 카드는 자신 필드 위의 "성각"이라는 이름이 붙은 몬스터 1장을 릴리스하고 패에서 특수 소환할 수 있다. 1턴에 1번, 이 카드 이외의 자신의 패 / 필드 위의 "성각"이라는 이름이 붙은 몬스터 1장을 릴리스하는 것으로, 상대 필드 위의 몬스터 1장을 선택하고 파괴한다. 또한, 이 카드가 릴리스되었을 때, 자신의 패 / 덱 / 묘지에서 드래곤족 일반 몬스터 1장을 고르고, 공격력 / 수비력을 0으로 하여 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这张卡可以把自己场上1只名字带有「圣刻」的怪兽解放从手卡特殊召唤。1回合1次，可以通过把这张卡以外的自己的手卡·场上1只名字带有「圣刻」的怪兽解放，选择对方场上1只怪兽破坏。此外，这张卡被解放时，从自己的手卡·卡组·墓地选1只龙族的通常怪兽，攻击力·守备力变成0特殊召唤。
+    ①：此卡可解放自己场上的１只“圣刻”怪兽来从手牌特殊召唤。②：１回合１次，从自己的手牌・场上解放此卡以外的１只“圣刻”怪兽，以对手场上的１只怪兽为对象可以发动。将该对手的怪兽破坏。③：此卡被解放的情况下发动。从自己的手牌・牌组・墓地挑选１只龙族通常怪兽，将其攻击力・守备力改成０并特殊召唤。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: LIGHT
@@ -80,6 +80,11 @@ sets:
     set_name: Galactic Overlord
     rarities:
     - Common
+  zh-CN:
+  - set_number: CL02-SC137
+    set_name: Classic Pack 02
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
