--- a/data/cards/39680372.yaml
+++ b/data/cards/39680372.yaml
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 자신 필드의 드래곤족 엑시즈 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 자신 몬스터와는 원래의 카드명이 다른 "성각" 엑시즈 몬스터 1장을, 대상 몬스터 위에 겹쳐 엑시즈 소환으로 취급하고 엑스트라 덱에서 특수 소환한다. ②: 묘지의 이 카드를 제외하고, 자신 묘지의 "성각" 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 수비 표시로 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合只能有1次使用其中任意1个。
-    ①：以自己场上1只龙族超量怪兽为对象才能发动。原本卡名和那只自己怪兽不同的1只「圣刻」超量怪兽在作为对象的怪兽上面重叠当作超量召唤从额外卡组特殊召唤。
-    ②：把墓地的这张卡除外，以自己墓地1只「圣刻」怪兽为对象才能发动。那只怪兽守备表示特殊召唤。
+    此卡名的①②效果１回合１次，仅可使用其中１个。①：以自己场上的１只龙族超量怪兽为对象可以发动。将原本卡名与该自己的怪兽不同的１只“圣刻”超量怪兽重叠在对象怪兽上面，视为超量召唤从额外牌组特殊召唤。②：将墓地的此卡除外，以自己墓地的１只“圣刻”怪兽为对象可以发动。以守备表示形式将该怪兽特殊召唤。
 card_type: Spell
 property: Normal
 series:
@@ -78,6 +76,11 @@ sets:
     set_name: Selection 10
     rarities:
     - Rare
+  zh-CN:
+  - set_number: CL02-SC147
+    set_name: Classic Pack 02
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
