--- a/data/cards/41639001.yaml
+++ b/data/cards/41639001.yaml
@@ -12,7 +12,7 @@ name:
   ko: 성각룡－드래곤 누트
   ko_rr:
   zh-TW:
-  zh-CN: 圣刻龙-半龙努特
+  zh-CN: 圣刻龙－龙人努特
 text:
   en: |-
     Once per turn, during either player's turn, when this face-up card on the field is targeted by a Spell Card, Trap Card, or card effect: Special Summon 1 Dragon-Type Normal Monster from your hand, Deck, or Graveyard, and make its ATK and DEF 0.
@@ -32,7 +32,7 @@ text:
     필드 위에 앞면 표시로 존재하는 이 카드가 마법 / 함정 / 효과 몬스터의 효과의 대상이 되었을 때 발동한다. 자신의 패 / 덱 / 묘지에서 드래곤족 일반 몬스터 1장을 고르고, 공격력 / 수비력을 0으로 하여 특수 소환한다. 이 효과는 1턴에 1번밖에 사용할 수 없다.
   zh-TW:
   zh-CN: |-
-    场上表侧表示存在的这张卡成为魔法·陷阱·效果怪兽的效果的对象时发动。从自己的手卡·卡组·墓地选1只龙族的通常怪兽，攻击力·守备力变成0特殊召唤。这个效果1回合只能使用1次。
+    ①：１回合１次，以场上的此卡作为对象的魔法・陷阱・怪兽的效果发动时发动。从自己的手牌・牌组・墓地挑选１只龙族通常怪兽，将其攻击力・守备力改成０并特殊召唤。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: LIGHT
@@ -78,6 +78,11 @@ sets:
   ko:
   - set_number: GAOV-KR018
     set_name: Galactic Overlord
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC134
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
