--- a/data/cards/66789970.yaml
+++ b/data/cards/66789970.yaml
@@ -12,7 +12,7 @@ name:
   ko: 성각룡-세테크 드래곤
   ko_rr:
   zh-TW:
-  zh-CN: 圣刻龙-塞特龙
+  zh-CN: 圣刻龙－赛特克龙
 text:
   en: |-
     Cannot be Normal Summoned or Set. Must first be Special Summoned (from your hand) by banishing 3 Dragon-Type Normal Monsters from your Graveyard. Once per turn: You can banish 1 Dragon-Type monster from your Graveyard to target 1 card on the field; destroy that target.
@@ -32,7 +32,7 @@ text:
     이 카드는 일반 소환/ 세트할 수 없다. 자신 묘지의 드래곤족 일반 몬스터 3장을 게임에서 제외한 경우에 특수 소환할 수 있다. 1턴에 1번, 자신 묘지의 드래곤족 몬스터 1장을 게임에서 제외하는 것으로, 필드 위의 카드 1장을 선택하고 파괴한다.
   zh-TW:
   zh-CN: |-
-    这张卡不能通常召唤。把自己墓地3只龙族的通常怪兽从游戏中除外的场合可以特殊召唤。1回合1次，可以通过把自己墓地1只龙族怪兽从游戏中除外，选择场上1张卡破坏。
+    此卡不可通常召唤。从自己的墓地将３只龙族通常怪兽除外的情况下可以特殊召唤。①：１回合１次，从自己的墓地将１只龙族怪兽除外，以场上的１张卡为对象可以发动。将该卡破坏。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: LIGHT
@@ -79,6 +79,11 @@ sets:
     set_name: Galactic Overlord
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: CL02-SC141
+    set_name: Classic Pack 02
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
