--- a/data/cards/78033100.yaml
+++ b/data/cards/78033100.yaml
@@ -12,7 +12,7 @@ name:
   ko: 성각룡－드래곤 게브
   ko_rr:
   zh-TW:
-  zh-CN: 圣刻龙-半龙盖布
+  zh-CN: 圣刻龙－龙人盖布
 text:
   en: |-
     When this card destroys an opponent's monster by battle and sends it to the Graveyard: Special Summon 1 Dragon-Type Normal Monster from your hand, Deck, or Graveyard, and make its ATK and DEF 0. When this card is Tributed: Special Summon 1 "Hieratic" Normal Monster from your hand, Deck or Graveyard.
@@ -32,7 +32,7 @@ text:
     이 카드가 전투에 의해서 상대 몬스터를 파괴하여 묘지로 보냈을 때, 자신의 패 / 덱 / 묘지에서 드래곤족 일반 몬스터 1장을 고르고, 공격력 / 수비력을 0으로 하여 특수 소환한다. 또한, 이 카드가 릴리스되었을 때, 자신의 패 / 덱 / 묘지에서 "성각"이라는 이름이 붙은 일반 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这张卡战斗破坏对方怪兽送去墓地时，从自己的手卡·卡组·墓地选1只龙族的通常怪兽，攻击力·守备力变成0特殊召唤。此外，这张卡被解放时，从自己的手卡·卡组·墓地把1只名字带有「圣刻」的通常怪兽特殊召唤。
+    ①：此卡战斗破坏对手怪兽并将其送至墓地的情况下发动。从自己的手牌・牌组・墓地挑选１只龙族通常怪兽，将其攻击力・守备力改成０并特殊召唤。②：此卡被解放的情况下发动。从自己的手牌・牌组・墓地挑选１只“圣刻”通常怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: LIGHT
@@ -78,6 +78,11 @@ sets:
   ko:
   - set_number: GAOV-KR019
     set_name: Galactic Overlord
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC135
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
