--- a/data/cards/38955728.yaml
+++ b/data/cards/38955728.yaml
@@ -32,7 +32,7 @@ text:
     오랜 세월 동안 사냥한 드래곤의 피로 인해, 보통 사람을 뛰어넘는 힘을 가진 여전사. 그 영혼은 죽은 드래곤의 원망으로 물들어, 전염병을 퍼뜨리는 사악한 용핵으로 전락했다. 이제 돌아갈 고향도 없고, 본능대로 칼을 피로 물들인 그 목적은, 그녀 자신에게도 생각나지 않는다...
   zh-TW:
   zh-CN: |-
-    长期以来持续猎龙而被龙血泼溅的缘故，得到了不属常人力量的女战士。其灵魂因沾染到所杀之龙的怨气，最终化为散布瘟疫的邪恶龙核。如今的她已经是无故乡可归，完全遵循着本能把刀剑染成血红，她自己也想不起那么做的目的了…。
+    穿越永恒不断追逐狩猎的龙身上溅出的血，赋予了女战士非常人可比之力量。她的魂魄被死去的龙的怨嗟浸染，最终化身为播撒疫病的邪恶龙核。可归之故里不复存在，甚至连她自己也已记不起，当初出于本能血染刀锋，究竟是为了什么......
 card_type: Monster
 monster_type_line: Dragon / Tuner
 attribute: DARK
@@ -98,6 +98,11 @@ sets:
     set_name: 'Invasion: Vengeance'
     rarities:
     - Rare
+  zh-CN:
+  - set_number: CL02-SC153
+    set_name: Classic Pack 02
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
