--- a/data/cards/47360060.yaml
+++ b/data/cards/47360060.yaml
@@ -32,7 +32,7 @@ text:
     자신 필드 위의 "성각"이라는 이름이 붙은 몬스터 1장을 릴리스하고 발동할 수 있다. 효과 몬스터의 효과 / 마법 / 함정 카드의 발동을 무효로 하고 파괴한다.
   zh-TW:
   zh-CN: |-
-    把自己场上1只名字带有「圣刻」的怪兽解放才能发动。效果怪兽的效果·魔法·陷阱卡的发动无效并破坏。
+    ①：怪兽的效果・魔法・陷阱卡发动时，解放自己场上的１只“圣刻”怪兽可以发动。将该发动无效并破坏。
 card_type: Trap
 property: Counter
 series:
@@ -90,6 +90,11 @@ sets:
   ko:
   - set_number: GAOV-KR072
     set_name: Galactic Overlord
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC149
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
