--- a/data/cards/63261835.yaml
+++ b/data/cards/63261835.yaml
@@ -12,7 +12,7 @@ name:
   ko: 해피 레이디·SC
   ko_rr: Haepi Reidi SC
   zh-TW:
-  zh-CN: 鹰身女郎 爪牙碎断
+  zh-CN: 神鹰女郎・裂碎爪
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
@@ -40,10 +40,8 @@ text:
     이 카드를 싱크로 소환할 경우, 자신 필드의 "해피" 몬스터 1장을 튜너로서 취급할 수 있다. 이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 카드명은, 필드 / 묘지에 존재하는 한 "해피 레이디"로서 취급한다. ②: 마법 / 함정 카드의 효과가 발동했을 때, 상대 필드의 몬스터 1장 또는 자신 필드의 "해피" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 주인의 패로 되돌린다.
   zh-TW:
   zh-CN: |-
-    调整＋调整以外的怪兽1只以上
-    这张卡同调召唤的场合，可以用自己场上1只「鹰身」怪兽当作调整使用。这个卡名的②的效果1回合只能使用1次。
-    ①：这张卡的卡名只要在场上·墓地存在当作「鹰身女郎」使用。
-    ②：魔法·陷阱卡的效果发动时，以对方场上1只怪兽或者自己场上1只「鹰身」怪兽为对象才能发动。那只怪兽回到持有者手卡。
+    协调＋１只以上协调以外的怪兽
+    在要将此卡同步召唤的情况下，可将自己场上的１只“神鹰”怪兽视为协调。此卡名的②效果１回合仅可使用１次。①：此卡只要存在于场上・墓地，卡名视为“神鹰女郎”。②：魔法・陷阱卡的效果发动时，以对手场上的１只怪兽或自己场上的１只“神鹰”怪兽为对象可以发动。将该怪兽放回持有者的手牌。
 card_type: Monster
 monster_type_line: Winged Beast / Synchro / Effect
 attribute: WIND
@@ -95,6 +93,12 @@ sets:
     set_name: Premium Pack Vol.16
     rarities:
     - Ultra Rare
+    - Secret Rare
+  zh-CN:
+  - set_number: CL02-SC167
+    set_name: Classic Pack 02
+    rarities:
+    - Super Rare
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
