--- a/data/cards/80316585.yaml
+++ b/data/cards/80316585.yaml
@@ -12,7 +12,7 @@ name:
   ko: 해피 레이디·SB
   ko_rr: Haepi Reidi Saibeo Bondaji
   zh-TW:
-  zh-CN: 鹰身女郎 电子紧身装束
+  zh-CN: 神鹰女郎・电子紧身装束
 text:
   en: |-
     (This card's name is always treated as "Harpie Lady".)
@@ -32,7 +32,7 @@ text:
     이 카드의 카드명은 룰상 "해피 레이디"로 취급한다.
   zh-TW:
   zh-CN: |-
-    这张卡的卡名在规则上当作「鹰身女郎」使用。
+    此卡的卡名规则上视为“神鹰女郎”。
 card_type: Monster
 monster_type_line: Winged Beast / Effect
 attribute: WIND
@@ -179,6 +179,11 @@ sets:
     rarities:
     - Common
     - Millennium Rare
+  zh-CN:
+  - set_number: CL02-SC164
+    set_name: Classic Pack 02
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
