--- a/data/cards/97317530.yaml
+++ b/data/cards/97317530.yaml
@@ -12,7 +12,7 @@ name:
   ko: 숲의 성수 카란토사
   ko_rr:
   zh-TW:
-  zh-CN: 森之圣兽 月兔耳兽
+  zh-CN: 森之圣兽 月耳草兔
 text:
   en: |-
     If this card is Special Summoned by the effect of a Beast monster: You can target 1 card on the field; destroy that target.
@@ -32,7 +32,7 @@ text:
     ①: 이 카드가 야수족 몬스터의 효과로 특수 소환에 성공했을 경우, 필드의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 파괴한다.
   zh-TW:
   zh-CN: |-
-    ①：这张卡用兽族怪兽的效果特殊召唤成功的场合，以场上1张卡为对象才能发动。那张卡破坏。
+    ①：此卡以兽族怪兽的效果特殊召唤成功的情况下，以场上的１张卡为对象可以发动。将该卡破坏。
 card_type: Monster
 monster_type_line: Beast / Effect
 attribute: EARTH
@@ -104,6 +104,11 @@ sets:
     set_name: Legacy of the Valiant
     rarities:
     - Common
+  zh-CN:
+  - set_number: CL02-SC178
+    set_name: Classic Pack 02
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
