--- a/data/cards/04192696.yaml
+++ b/data/cards/04192696.yaml
@@ -12,7 +12,7 @@ name:
   ko: 숲의 성령 에코
   ko_rr:
   zh-TW: 森之聖靈 木靈
-  zh-CN: 森之圣灵 厄科
+  zh-CN: 森之圣灵 木灵
 text:
   en: |-
     When you take damage from an opponent's card effect: You can Special Summon this card from your hand, and if you do, inflict damage to your opponent equal to the damage you took, also both players take no further effect damage this turn.
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     我方因对手卡牌效果受到伤害时可发动。从手牌特殊召唤此卡，给予对手生命与所受伤害相同的伤害。并且，此回合双方受到的效果伤害各自变为0。
   zh-CN: |-
-    对方的卡的效果让自己受到伤害时才能发动。这张卡从手卡特殊召唤，给与对方基本分和受到的伤害相同的伤害。并且，这个回合双方受到的效果伤害变成0。
+    ①：自己因对手的效果受到伤害时可以发动。将此卡从手牌特殊召唤，给予对手与所受伤害相同数值的伤害。此回合双方所受效果伤害变为０。
 card_type: Monster
 monster_type_line: Plant / Effect
 attribute: EARTH
@@ -88,6 +88,11 @@ sets:
   zh-TW:
   - set_number: REDU-TC090
     set_name: Return of the Duelist
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC176
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
