--- a/data/cards/24096499.yaml
+++ b/data/cards/24096499.yaml
@@ -32,8 +32,7 @@ text:
     "숲의 성수 발레리폰"의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 패를 1장 버리고 "숲의 성수 발레리폰" 이외의 자신 묘지의 레벨 2 이하의 야수족 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 앞면 공격 표시 또는 뒷면 수비 표시로 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    「森之圣兽 缬草小鹿」的效果1回合只能使用1次。
-    ①：丢弃1张手卡，以「森之圣兽 缬草小鹿」以外的自己墓地1只2星以下的兽族怪兽为对象才能发动。那只怪兽表侧攻击表示或者里侧守备表示特殊召唤。
+    此卡名的效果１回合仅可使用１次。①：舍弃１张手牌，以自己墓地“森之圣兽 缬草小鹿”以外的１只等级２以下的兽族怪兽为对象可以发动。将该怪兽以表侧攻击表示或里侧守备表示特殊召唤。
 card_type: Monster
 monster_type_line: Beast / Tuner / Effect
 attribute: EARTH
@@ -107,6 +106,11 @@ sets:
   ko:
   - set_number: NECH-KR038
     set_name: The New Challengers
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC179
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
