--- a/data/cards/33750025.yaml
+++ b/data/cards/33750025.yaml
@@ -12,7 +12,7 @@ name:
   ko: 윤회룡 삼사라
   ko_rr: Yunhwiryong Samsara
   zh-TW:
-  zh-CN: 轮回龙
+  zh-CN: 轮回龙 僧娑罗
 text:
   en: |-
     This card can be treated as 2 Tributes for the Tribute Summon of a Dragon monster. You can banish this card from your GY, then target 1 Level 5 or higher Dragon monster in your GY; add it to your hand, then, immediately after this effect resolves, you can Tribute Summon that monster. You can only use this effect of "Samsara Dragon" once per turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 드래곤족 몬스터를 어드밴스 소환할 경우, 이 카드는 2장만큼의 릴리스로 할 수 있다. ②: 묘지의 이 카드를 제외하고, 자신 묘지의 레벨 5 이상의 드래곤족 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 패에 넣는다. 그 후, 그 몬스터를 어드밴스 소환할 수 있다.
   zh-TW:
   zh-CN: |-
-    这个卡名的②的效果1回合只能使用1次。
-    ①：龙族怪兽上级召唤的场合，这张卡可以作为2只的数量解放。
-    ②：把墓地的这张卡除外，以自己墓地1只5星以上的龙族怪兽为对象才能发动。那只怪兽加入手卡。那之后，可以把那只怪兽上级召唤。
+    此卡名的②效果１回合仅可使用１次。①：上级召唤龙族怪兽的情况下，此卡可作为２只解放。②：将墓地的此卡除外，以自己墓地１只等级５以上的龙族怪兽为对象可以发动。将该怪兽加入手牌。然后可将该怪兽上级召唤。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: LIGHT
@@ -81,6 +79,11 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  zh-CN:
+  - set_number: CL02-SC180
+    set_name: Classic Pack 02
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
