--- a/data/cards/48427163.yaml
+++ b/data/cards/48427163.yaml
@@ -32,7 +32,7 @@ text:
     "문라이트 퍼플 버터플라이"의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신의 패 / 필드의 이 카드를 묘지로 보내고, 자신 필드의 "문라이트" 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터의 공격력은 턴 종료시까지 1000 올린다. ②: 묘지의 이 카드를 제외하고 발동할 수 있다. 패에서 "문라이트" 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    「月光紫蝶」的②的效果1回合只能使用1次。①：把自己的手卡·场上的这张卡送去墓地，以自己场上1只「月光」怪兽为对象才能发动。那只怪兽的攻击力直到回合结束时上升1000。②：把墓地的这张卡除外才能发动。从手卡把1只「月光」怪兽特殊召唤。
+    此卡名的②效果１回合仅可使用１次。①：将自己手牌・场上的此卡送至墓地，以自己场上的１只“月光”怪兽为对象可以发动。该怪兽的攻击力直至回合结束时为止上升１０００。②：将墓地的此卡除外可以发动。从手牌将１只“月光”怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Beast-Warrior / Effect
 attribute: DARK
@@ -78,6 +78,11 @@ sets:
   ko:
   - set_number: SHVI-KR009
     set_name: Shining Victories
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC171
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
