--- a/data/cards/84812868.yaml
+++ b/data/cards/84812868.yaml
@@ -32,7 +32,7 @@ text:
     ①: 이 카드가 일반 소환에 성공했을 때, "문라이트 화이트 래빗" 이외의 자신 묘지의 "문라이트" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 수비 표시로 특수 소환한다. ②: 1턴에 1번, 이 카드 이외의 자신 필드의 "문라이트" 카드의 수까지, 상대 필드의 마법 / 함정 카드를 대상으로 하고 발동할 수 있다. 그 카드를 주인의 패로 되돌린다.
   zh-TW:
   zh-CN: |-
-    ①：这张卡召唤成功时，以「月光白兎」以外的自己墓地1只「月光」怪兽为对象才能发动。那只怪兽守备表示特殊召唤。②：1回合1次，以最多有这张卡以外的自己场上的「月光」卡数量的对方场上的魔法·陷阱卡为对象才能发动。那些卡回到持有者手卡。
+    ①：此卡召唤成功时，以自己墓地的１只“月光白兔”以外的“月光”怪兽为对象可以发动。以守备表示形式将该怪兽特殊召唤。②：１回合１次，以对手场上的魔法・陷阱卡为对象可以发动，数量最多为自己场上此卡以外的“月光”卡的数量。将该卡放回持有者的手牌。
 card_type: Monster
 monster_type_line: Beast-Warrior / Effect
 attribute: DARK
@@ -78,6 +78,11 @@ sets:
   ko:
   - set_number: SHVI-KR010
     set_name: Shining Victories
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC172
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
