--- a/data/cards/85696777.yaml
+++ b/data/cards/85696777.yaml
@@ -12,7 +12,7 @@ name:
   ko: 해피 컨덕터
   ko_rr: Haepi Keondeokta
   zh-TW:
-  zh-CN: 鹰身引导者
+  zh-CN: 神鹰指挥者
 text:
   en: |-
     2 WIND monsters
@@ -52,11 +52,8 @@ text:
     이 카드명의 ②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 카드명은, 필드 / 묘지에 존재하는 한 "해피 레이디"로 취급한다. ②: 자신 필드의 "해피" 몬스터가 전투 / 효과로 파괴될 경우, 대신에 자신 필드의 마법 / 함정 카드 1장을 파괴할 수 있다. ③: 이 카드 이외의 자신 필드의 앞면 표시의 "해피" 몬스터가 자신의 패로 되돌아갔을 경우, 상대 필드의 특수 소환된 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 주인의 패로 되돌린다.
   zh-TW:
   zh-CN: |-
-    风属性怪兽2只
-    这个卡名的②③的效果1回合各能使用1次。
-    ①：这张卡的卡名只要在场上·墓地存在当作「鹰身女郎」使用。
-    ②：自己场上的「鹰身」怪兽被战斗·效果破坏的场合，可以作为代替把自己场上1张魔法·陷阱卡破坏。
-    ③：这张卡以外的自己场上的表侧表示的「鹰身」怪兽回到自己手卡的场合，以对方场上1只特殊召唤的怪兽为对象才能发动。那只怪兽回到持有者手卡。
+    风属性怪兽２只
+    此卡名的②③效果１回合仅可各使用１次。①：此卡只要存在于场上・墓地，卡名视为“神鹰女郎”。②：自己场上的“神鹰”怪兽将被战斗・效果破坏的情况下，可破坏自己场上的１张魔法・陷阱卡作为代替。③：自己场上此卡以外的表侧表示“神鹰”怪兽被放回自己手牌的情况下，以对手场上１只被特殊召唤的怪兽为对象可以发动。将该怪兽放回持有者的手牌。
 card_type: Monster
 monster_type_line: Winged Beast / Link / Effect
 attribute: WIND
@@ -152,6 +149,11 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  zh-CN:
+  - set_number: CL02-SC169
+    set_name: Classic Pack 02
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
