--- a/data/cards/85909450.yaml
+++ b/data/cards/85909450.yaml
@@ -12,7 +12,7 @@ name:
   ko: 해피의 애완 미라지 드래곤
   ko_rr:
   zh-TW: 神鷹女妖的寵物幻龍
-  zh-CN: 鹰身女妖的宠物幻龙
+  zh-CN: 神鹰的宠物幻龙
 text:
   en: |-
     3 Level 4 WIND monsters
@@ -42,7 +42,8 @@ text:
     风属性等级4怪兽×3
     如此卡没有超量素材此卡的效果将不被适用。此卡可直接攻击对手玩家。只要此卡以表侧表示存在于场上，对手不可将冠有「神鷹」之名的怪兽作为攻击对象，也不可作为卡牌效果的对象。我方每次结束阶段移除此卡的1个超量素材。
   zh-CN: |-
-    风属性4星怪兽×3。这张卡的效果若这张卡的XYZ素材没有则不适用。这张卡可以直接攻击对方玩家。只要这张卡在场上表侧表示存在，对方不能把名字带有「鹰身」的怪兽作为攻击对象，也不能作为卡的效果的对象。每次自己的结束阶段把这张卡1个XYZ素材取除。
+    风属性等级４怪兽×３
+    若此卡没有超量素材，此卡的效果便不会适用。①：此卡可直接攻击。②：只要此卡存在于怪兽区域，对手不可将“神鹰”怪兽选择为攻击对象，也不可作为效果的对象。③：在自己的结束阶段发动。去除此卡的１个超量素材。
 card_type: Monster
 monster_type_line: Dragon / Xyz / Effect
 attribute: WIND
@@ -134,6 +135,11 @@ sets:
   zh-TW:
   - set_number: LTGY-TC055
     set_name: Lord of the Tachyon Galaxy
+    rarities:
+    - Rare
+  zh-CN:
+  - set_number: CL02-SC168
+    set_name: Classic Pack 02
     rarities:
     - Rare
 limit_regulation:
