--- a/data/cards/95679145.yaml
+++ b/data/cards/95679145.yaml
@@ -12,7 +12,7 @@ name:
   ko: 막시무스 드래그마
   ko_rr: Maksimuseu Deuraegeuma
   zh-TW:
-  zh-CN: 教导的大神祇官
+  zh-CN: 教导之大神祇官
 text:
   en: |-
     You can banish 1 Fusion, Synchro, Xyz, or Link Monster from your GY; Special Summon this card from your hand. During your Main Phase: You can activate this effect; send 2 monsters with different names from your Extra Deck to the GY, also your opponent sends 2 monsters from their Extra Deck to the GY, also you cannot Special Summon from the Extra Deck for the rest of this turn. You can only use each effect of "Dogmatika Maximus" once per turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 묘지에서 융합 / 싱크로 / 엑시즈 / 링크 몬스터 1장을 제외하고 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 자신 메인 페이즈에 발동할 수 있다. 자신의 엑스트라 덱에서 카드명이 다른 몬스터 2장을 묘지로 보낸다. 상대는 자신의 엑스트라 덱에서 몬스터 2장을 묘지로 보낸다. 이 효과의 발동 후, 턴 종료시까지 자신은 엑스트라 덱에서 몬스터를 특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：从自己墓地把1只融合·同调·超量·连接怪兽除外才能发动。这张卡从手卡特殊召唤。
-    ②：自己主要阶段才能发动。从自己的额外卡组把2只卡名不同的怪兽送去墓地。对方从自身的额外卡组把2只怪兽送去墓地。这个效果的发动后，直到回合结束时自己不能从额外卡组把怪兽特殊召唤。
+    此卡名的①②效果１回合仅可各使用１次。①：从自己的墓地将１只融合・同步・超量・连接怪兽除外可以发动。从手牌将此卡特殊召唤。②：在自己的主要阶段可以发动。从自己的额外牌组将２只卡名不同的怪兽送至墓地。对手从自身的额外牌组将２只怪兽送至墓地。此效果发动后，直至回合结束时为止自己不可从额外牌组特殊召唤怪兽。
 card_type: Monster
 monster_type_line: Spellcaster / Effect
 attribute: LIGHT
@@ -102,6 +100,11 @@ sets:
     set_name: Rise of the Duelist
     rarities:
     - Rare
+  zh-CN:
+  - set_number: MGP5-SC009
+    set_name: Mega Pack 05
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
