--- a/data/cards/60303688.yaml
+++ b/data/cards/60303688.yaml
@@ -127,6 +127,15 @@ sets:
     rarities:
     - Super Rare
     - Prismatic Secret Rare
+  - set_number: RC04-JP021
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: ROTD-KR005
     set_name: Rise of the Duelist
