--- a/data/cards/78794994.yaml
+++ b/data/cards/78794994.yaml
@@ -8,7 +8,7 @@ name:
   it: Simboli del Dovere
   pt: Símbolos doe Devir
   ja: <ruby>戦<rt>せん</rt></ruby><ruby>線<rt>せん</rt></ruby><ruby>復<rt>ふっ</rt></ruby><ruby>活<rt>かつ</rt></ruby>の<ruby>代<rt>だい</rt></ruby><ruby>償<rt>しょう</rt></ruby>
-  ja_romaji: Sensen Fukkatsu no Daishō
+  ja_romaji: Sensenfukkatsu no Daishō
   ko: 전선부활의 제물
   ko_rr:
   zh-TW: 戰線復活的代價
