--- a/data/cards/22073844.yaml
+++ b/data/cards/22073844.yaml
@@ -12,7 +12,7 @@ name:
   ko: 교도추기 테트라드래그마
   ko_rr: Gyodochugi Teteuradeuraegeuma
   zh-TW:
-  zh-CN: 教导枢机 神龙四教导
+  zh-CN: 教导枢机 尊位德拉格马
 text:
   en: |-
     Cannot be Normal Summoned/Set. Must be Special Summoned by its own effect. You can target 4 Fusion, Synchro, Xyz, and/or Link Monsters in the GYs; Special Summon this card from your hand, and if you do, banish them. At the start of the Damage Step, if this card battles a Special Summoned monster: Destroy all your opponent's Attack Position monsters, then inflict 800 damage to your opponent for each Fusion, Synchro, Xyz, and Link Monster destroyed by this effect.
@@ -32,9 +32,7 @@ text:
     이 카드는 통상 소환할 수 없으며, 이 카드의 효과로만 특수 소환할 수 있다. ①: 자신 / 상대 묘지의 융합 / 싱크로 / 엑시즈 / 링크 몬스터를 합계 4장 대상으로 하고 발동할 수 있다. 이 카드를 패에서 특수 소환하고, 대상 몬스터를 제외한다. ②: 특수 소환된 몬스터와 이 카드가 전투를 실행하는 데미지 스텝 개시시에 발동한다. 상대 필드의 공격 표시 몬스터를 전부 파괴한다. 그 후, 이 효과로 파괴한 융합 / 싱크로 / 엑시즈 / 링크 몬스터의 수 × 800 데미지를 상대에게 준다.
   zh-TW:
   zh-CN: |-
-    这张卡不能通常召唤，用这张卡的效果才能特殊召唤。
-    ①：以自己·对方的墓地的融合·同调·超量·连接怪兽合计4只为对象才能发动。这张卡从手卡特殊召唤，作为对象的怪兽除外。
-    ②：特殊召唤的怪兽和这张卡进行战斗的伤害步骤开始时发动。对方场上的攻击表示怪兽全部破坏。那之后，给与对方这个效果破坏的融合·同调·超量·连接怪兽数量×800伤害。
+    此卡不可通常召唤，仅可以此卡的效果特殊召唤。①：以自己・对手墓地的融合・同步・超量・连接怪兽合计４只为对象可以发动。将此卡从手牌特殊召唤，将对象怪兽除外。②：在被特殊召唤的怪兽与此卡进行战斗的伤害步骤开始时发动。将对手场上攻击表示的怪兽全部破坏。然后，给予对手相当于以此效果破坏的融合・同步・超量・连接怪兽数量×８００的伤害。
 card_type: Monster
 monster_type_line: Spellcaster / Effect
 attribute: LIGHT
@@ -100,6 +98,11 @@ sets:
   ko:
   - set_number: ROTD-KR010
     set_name: Rise of the Duelist
+    rarities:
+    - Rare
+  zh-CN:
+  - set_number: MGP5-SC010
+    set_name: Mega Pack 05
     rarities:
     - Rare
 limit_regulation:
