--- a/data/cards/95953557.yaml
+++ b/data/cards/95953557.yaml
@@ -12,7 +12,7 @@ name:
   ko: 불꽃성기사－아스톨포
   ko_rr: Pulkkotseonggisa - Aseutolpo
   zh-TW:
-  zh-CN: 焰圣骑士-阿斯托尔福
+  zh-CN: 焰圣骑士－阿斯托尔福
 text:
   en: |-
     You can banish 1 FIRE Warrior monster from your hand or GY; Special Summon this card from your hand, then you can make this card's Level become the Level of that banished monster. You can banish this card from your GY; Special Summon this banished card during your second Standby Phase after this effect's activation, then you can Special Summon 1 of your FIRE Warrior monsters that is banished or in your GY. You can only use each effect of "Infernoble Knight Astolfo" once per Duel.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 듀얼 중에 1번밖에 사용할 수 없다. ①: 자신의 패 / 묘지에서 전사족 / 화염 속성 몬스터 1장을 제외하고 발동할 수 있다. 이 카드를 패에서 특수 소환한다. 그 후, 이 카드의 레벨을 제외한 몬스터와 같게 할 수 있다. ②: 묘지의 이 카드를 제외하고 발동할 수 있다. 발동 후 2번째의 자신 스탠바이 페이즈에, 제외되어 있는 이 카드를 특수 소환한다. 그 후, 자신 묘지의 몬스터 및 제외되어 있는 자신 몬스터 중에서, 전사족 / 화염 속성 몬스터 1장을 고르고 특수 소환할 수 있다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果在决斗中各能使用1次。
-    ①：从自己的手卡·墓地把1只战士族·炎属性怪兽除外才能发动。这张卡从手卡特殊召唤。那之后，可以把这张卡的等级变成和除外的怪兽相同。
-    ②：把墓地的这张卡除外才能发动。发动后第2次的自己准备阶段，除外的这张卡特殊召唤。那之后，可以从自己墓地的怪兽以及除外的自己怪兽之中选1只战士族·炎属性怪兽特殊召唤。
+    此卡名的①②效果在决斗中仅可各使用１次。①：从自己的手牌・墓地除外１只战士族・炎属性怪兽可以发动。从手牌将此卡特殊召唤。然后，可以使此卡的等级与被除外的怪兽相同。②：将墓地的此卡除外可以发动。在发动后第２次自己准备阶段，将被除外的此卡特殊召唤。然后，可从自己墓地的怪兽及被除外的自己的怪兽中，挑选１只战士族・炎属性怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: FIRE
@@ -101,6 +99,11 @@ sets:
   ko:
   - set_number: ROTD-KR012
     set_name: Rise of the Duelist
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: MGP5-SC012
+    set_name: Mega Pack 05
     rarities:
     - Common
 limit_regulation:
