--- a/data/cards/35261759.yaml
+++ b/data/cards/35261759.yaml
@@ -203,6 +203,15 @@ sets:
     set_name: The Pot Collection
     rarities:
     - Ultra Parallel Rare
+  - set_number: RC04-JP057
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: TDIL-KR066
     set_name: The Dark Illusion
