--- a/data/cards/48686504.yaml
+++ b/data/cards/48686504.yaml
@@ -260,6 +260,15 @@ sets:
     set_name: 'Structure Deck: Forest of the Traptrix'
     rarities:
     - Common
+  - set_number: RC04-JP002
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: EXP1-KR031
     set_name: Extra Pack
