--- a/data/cards/49238328.yaml
+++ b/data/cards/49238328.yaml
@@ -176,6 +176,15 @@ sets:
     set_name: The Pot Collection
     rarities:
     - Ultra Parallel Rare
+  - set_number: RC04-JP060
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: SAST-KR067
     set_name: Savage Strike
