--- a/data/cards/55285840.yaml
+++ b/data/cards/55285840.yaml
@@ -172,6 +172,15 @@ sets:
     set_name: Selection 10
     rarities:
     - Rare
+  - set_number: RC04-JP042
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: EP19-KR041
     set_name: Extra Pack 2019
