--- a/data/rush/16307.yaml
+++ b/data/rush/16307.yaml
@@ -58,6 +58,10 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Rush Rare
+  - set_number: RD/LGP1-JP015
+    set_name: Legend Awakening Pack
+    rarities:
+    - Rare
   ko:
   - set_number: RD/KP05-KR000
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
