--- a/data/cards/08083925.yaml
+++ b/data/cards/08083925.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>Ｌｉｖｅ☆Ｔｗｉｎ<rt>ライブツイン</rt></ruby> エントランス
   ja_romaji: Raibu Tsuin Entoransu
   ko: <ruby>Live☆Twin<rt>라이브트윈</rt></ruby> 엔트런스
-  ko_rr:
+  ko_rr: Raibeuteuwin Enteureonseu
   zh-TW:
   zh-CN: 直播☆双子 实况入口
 text:
