--- a/data/cards/11270236.yaml
+++ b/data/cards/11270236.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>召<rt>しょう</rt></ruby><ruby>喚<rt>かん</rt></ruby><ruby>獣<rt>じゅう</rt></ruby>エリュシオン
   ja_romaji: Shōkanjū Eryushion
   ko: 소환수 엘리시온
-  ko_rr:
+  ko_rr: Sohwansu Ellision
   zh-TW:
   zh-CN: 召唤兽 埃律西昂
 text:
