--- a/data/cards/34365442.yaml
+++ b/data/cards/34365442.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>Ｅｖｉｌ★Ｔｗｉｎ<rt>イビルツイン</rt></ruby> イージーゲーム
   ja_romaji: Ibiru Tsuin Ījī Gēmu
   ko: <ruby>Evil★Twin<rt>이빌트윈</rt></ruby> 이지게임
-  ko_rr:
+  ko_rr: Ibilteuwin Ijigeim
   zh-TW:
   zh-CN: 邪恶★双子 低难度游戏
 text:
