--- a/data/cards/47457347.yaml
+++ b/data/cards/47457347.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>魔<rt>ま</rt></ruby><ruby>法<rt>ほう</rt></ruby><ruby>名<rt>めい</rt></ruby>－「<ruby>大いなる獣<rt>ト・メガ・セリオン</rt></ruby>」
   ja_romaji: Mahōmei - "To Mega Serion"
   ko: 마법명－"투 메가 세리온"
-  ko_rr:
+  ko_rr: Mabeopmyeong - "Tu Mega Serion"
   zh-TW:
   zh-CN: 魔法名-「大兽」
 text:
