--- a/data/cards/49513164.yaml
+++ b/data/cards/49513164.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>召<rt>しょう</rt></ruby><ruby>喚<rt>かん</rt></ruby><ruby>獣<rt>じゅう</rt></ruby>ライディーン
   ja_romaji: Shōkanjū Raidīn
   ko: 소환수 라이딘
-  ko_rr:
+  ko_rr: Sohwansu Raidin
   zh-TW:
   zh-CN: 召唤兽 雷电
 text:
