--- a/data/cards/61692648.yaml
+++ b/data/cards/61692648.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>勇<rt>ゆう</rt></ruby><ruby>気<rt>き</rt></ruby><ruby>機<rt>き</rt></ruby><ruby>関<rt>かん</rt></ruby><ruby>車<rt>しゃ</rt></ruby>ブレイブポッポ
   ja_romaji: Yūkikikansha Bureibu Poppo
   ko: 용기기관차 브레이브폭폭
-  ko_rr:
+  ko_rr: Yonggigigwancha Beureibeupokpok
   zh-TW:
   zh-CN: 勇气机关车 勇敢噗噗
 text:
