--- a/data/cards/61976639.yaml
+++ b/data/cards/61976639.yaml
@@ -10,7 +10,7 @@ name:
   ja: シークレット・パスフレーズ
   ja_romaji: Shīkuretto Pasufurēzu
   ko: 시크릿 패스프레이즈
-  ko_rr:
+  ko_rr: Sikeurit Paeseupeureijeu
   zh-TW:
   zh-CN: 秘密验证语
 text:
