--- a/data/cards/00458748.yaml
+++ b/data/cards/00458748.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>法<rt>ほう</rt></ruby>の<ruby>聖<rt>せい</rt></ruby><ruby>典<rt>てん</rt></ruby>
   ja_romaji: Hō no Seiten
   ko: 법의 성전
-  ko_rr:
+  ko_rr: Beop-ui Seongjeon
   zh-TW:
   zh-CN: 法之圣典
 text:
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：自分フィールドの「召喚獣」モンスター１体をリリースして発動できる。リリースしたモンスターとは元々の属性が異なる「召喚獣」モンスター１体を融合召喚扱いとしてＥＸデッキから特殊召喚する。
   ko: |-
-    "법의 성전"은 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드의 "소환수" 몬스터 1장을 릴리스하고 발동할 수 있다. 릴리스한 몬스터와 원래의 속성이 다른 "소환수" 몬스터 1장을 융합 소환으로 취급하여 엑스트라 덱에서 특수 소환한다.
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드의 "소환수" 몬스터 1장을 릴리스하고 발동할 수 있다. 릴리스한 몬스터와는 원래의 속성이 다른 "소환수" 몬스터 1장을 융합 소환으로 취급하여 엑스트라 덱에서 특수 소환한다.
   zh-TW:
   zh-CN: |-
     「法之圣典」在1回合只能发动1张。①：把自己场上1只「召唤兽」怪兽解放才能发动。原本属性和解放的怪兽不同的1只「召唤兽」怪兽当作融合召唤从额外卡组特殊召唤。
