--- a/data/cards/03814632.yaml
+++ b/data/cards/03814632.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>巨<rt>きょ</rt></ruby><ruby>大<rt>だい</rt></ruby><ruby>空<rt>くう</rt></ruby><ruby>中<rt>ちゅう</rt></ruby><ruby>宮<rt>きゅう</rt></ruby><ruby>殿<rt>でん</rt></ruby>ガンガリディア
   ja_romaji: Chōkyodai Kūchūkyūden Gangaridia
   ko: 초거대 공중궁전 강가리다이
-  ko_rr:
+  ko_rr: Chogeodae Gongjunggungjeon Ganggaridai
   zh-TW:
   zh-CN: 超巨大空中宫殿 冈加里迪亚
 text:
@@ -37,7 +37,7 @@ text:
     このカード名の効果は１ターンに１度しか使用できず、この効果を発動するターン、このカードは攻撃できない。①：このカードのＸ素材を１つ取り除き、相手フィールドのカード１枚を対象として発動できる。その相手のカードを破壊し、相手に１０００ダメージを与える。
   ko: |-
     레벨 10 몬스터 × 2
-    이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 상대 필드 위의 카드 1장을 선택하여 파괴하고, 상대 라이프에 1000 포인트 데미지를 준다. "초거대 공중궁전 강가리다이"의 효과는 1턴에 1번밖에 사용할 수 없고, 이 효과를 발동하는 턴에, 이 카드는 공격할 수 없다.
+    이 카드명의 효과는 1턴에 1번밖에 사용할 수 없으며, 이 효과를 발동하는 턴에, 이 카드는 공격할 수 없다. ①: 이 카드의 엑시즈 소재를 1개 제거하고, 상대 필드의 카드 1장을 대상으로 하여 발동할 수 있다. 그 상대의 카드를 파괴하고, 상대에게 1000 데미지를 준다.
   zh-TW:
   zh-CN: |-
     等级10怪兽×2
