--- a/data/cards/09205573.yaml
+++ b/data/cards/09205573.yaml
@@ -37,7 +37,7 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚に成功した場合、自分フィールドに「リィラ」モンスターが存在すれば発動できる。自分はデッキから１枚ドローする。②：自分フィールドに「リィラ」モンスターが存在しない場合、自分・相手のメインフェイズに発動できる。自分の墓地から「リィラ」モンスター１体を選んで特殊召喚する。このターン、自分は悪魔族モンスターしかＥＸデッキから特殊召喚できない。
   ko: |-
     "키스킬" 몬스터를 포함하는 몬스터 2장
-    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 "리일라" 몬스터가 존재하고, 이 카드가 특수 소환에 성공했을 경우에 발동할 수 있다. 자신은 덱에서 1장 드로우한다. ②: 자신 필드에 "리일라" 몬스터가 존재하지 않을 경우, 자신 / 상대의 메인 페이즈에 발동할 수 있다. 자신 묘지에서 "리일라" 몬스터 1장을 고르고 특수 소환한다. 이 턴에, 자신은 악마족 몬스터밖에 엑스트라 덱에서 특수 소환할 수 없다.
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 특수 소환에 성공했을 경우, 자신 필드에 "리일라" 몬스터가 존재하면 발동할 수 있다. 자신은 덱에서 1장 드로우한다. ②: 자신 필드에 "리일라" 몬스터가 존재하지 않을 경우, 자신 / 상대의 메인 페이즈에 발동할 수 있다. 자신 묘지에서 "리일라" 몬스터 1장을 고르고 특수 소환한다. 이 턴에, 자신은 악마족 몬스터밖에 엑스트라 덱에서 특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
     包括“姬丝吉尔”怪兽在内的怪兽2只
