--- a/data/cards/12307878.yaml
+++ b/data/cards/12307878.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>召<rt>しょう</rt></ruby><ruby>喚<rt>かん</rt></ruby><ruby>獣<rt>じゅう</rt></ruby>プルガトリオ
   ja_romaji: Shōkanjū Purugatorio
   ko: 소환수 푸르가트리오
-  ko_rr:
+  ko_rr: Sohwansu Pureugateurio
   zh-TW:
   zh-CN: 召唤兽 普尔加托里奥
 text:
