--- a/data/cards/13529466.yaml
+++ b/data/cards/13529466.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>召<rt>しょう</rt></ruby><ruby>喚<rt>かん</rt></ruby><ruby>獣<rt>じゅう</rt></ruby>カリギュラ
   ja_romaji: Shōkanjū Karigyura
   ko: 소환수 칼리굴라
-  ko_rr:
+  ko_rr: Sohwansu Kalligulla
   zh-TW:
   zh-CN: 召唤兽 卡利古拉
 text:
@@ -37,7 +37,7 @@ text:
     ①：このカードがモンスターゾーンに存在する限り、その間はお互いに、１ターンに１度しかモンスターの効果を発動できず、１度のバトルフェイズ中にモンスター１体でしか攻撃できない。
   ko: |-
     "소환사 알레이스터" ＋ 어둠 속성 몬스터
-    ①: 이 카드가 몬스터 존에 존재하는 한, 그 동안은 서로, 각각 1턴에 1번밖에 몬스터의 효과를 발동할 수 없으며, 각각 배틀 페이즈에 몬스터 1장으로밖에 공격할 수 없다.
+    ①: 이 카드가 몬스터 존에 존재하는 한, 그 동안은 서로, 1턴에 1번밖에 몬스터의 효과를 발동할 수 없으며, 1번의 배틀 페이즈 중에 몬스터 1장으로밖에 공격할 수 없다.
   zh-TW:
   zh-CN: |-
     「召唤师 阿莱斯特」＋暗属性怪兽
