--- a/data/cards/36326160.yaml
+++ b/data/cards/36326160.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>Ｌｉｖｅ☆Ｔｗｉｎ<rt>ライブツイン</rt></ruby> キスキル
   ja_romaji: Raibu Tsuin Kisukiru
   ko: <ruby>Live☆Twin<rt>라이브트윈</rt></ruby> 키스킬
-  ko_rr:
+  ko_rr: Raibeuteuwin Kiseukil
   zh-TW:
   zh-CN: 直播☆双子 姬丝吉尔
 text:
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカード名の①の効果は１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚に成功した場合、自分フィールドに他のモンスターが存在しなければ発動できる。手札・デッキから「リィラ」モンスター１体を特殊召喚する。②：このカードがモンスターゾーンに存在する限り、相手モンスターが攻撃宣言する度に、自分は５００ＬＰ回復する。
   ko: |-
-    이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 다른 몬스터가 존재하지 않으며, 이 카드가 일반 소환 / 특수 소환에 성공했을 경우에 발동할 수 있다. 패 / 덱에서 "리일라" 몬스터 1장을 특수 소환한다. ②: 이 카드가 몬스터 존에 존재하는 한, 상대 몬스터가 공격 선언할 때마다, 자신은 500 LP 회복한다.
+    이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우, 자신 필드에 다른 몬스터가 존재하지 않으면 발동할 수 있다. 패 / 덱에서 "리일라" 몬스터 1장을 특수 소환한다. ②: 이 카드가 몬스터 존에 존재하는 한, 상대 몬스터가 공격 선언할 때마다, 자신은 500 LP 회복한다.
   zh-TW:
   zh-CN: |-
     此卡名的①效果1回合仅可使用1次。①：自己场上没有其他怪兽存在，此卡召唤・特殊召唤成功的情况下可以发动。从手牌・牌组将1只“璃拉”怪兽特殊召唤。②：只要此卡存在于怪兽区域，每次对手怪兽攻击宣言自己恢复500LP。
