--- a/data/cards/36609518.yaml
+++ b/data/cards/36609518.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>Ｅｖｉｌ★Ｔｗｉｎ<rt>イビルツイン</rt></ruby> リィラ
   ja_romaji: Ibiru Tsuin Ryira
   ko: <ruby>Evil★Twin<rt>이빌트윈</rt></ruby> 리일라
-  ko_rr:
+  ko_rr: Ibilteuwin Riilla
   zh-TW:
   zh-CN: 邪恶★双子 璃拉
 text:
@@ -37,7 +37,7 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚に成功した場合、自分フィールドに「キスキル」モンスターが存在すれば、フィールドのカード１枚を対象として発動できる。そのカードを破壊する。②：自分フィールドに「キスキル」モンスターが存在しない場合、自分・相手のメインフェイズに発動できる。自分の墓地から「キスキル」モンスター１体を選んで特殊召喚する。このターン、自分は悪魔族モンスターしかＥＸデッキから特殊召喚できない。
   ko: |-
     "리일라" 몬스터를 포함하는 몬스터 2장
-    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 "키스킬" 몬스터가 존재하고, 이 카드가 특수 소환에 성공했을 경우, 필드의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 파괴한다. ②: 자신 필드에 "키스킬" 몬스터가 존재하지 않을 경우, 자신 / 상대 메인 페이즈에 발동할 수 있다. 자신 묘지에서 "키스킬" 몬스터 1장을 고르고 특수 소환한다. 이 턴에 자신은 악마족 몬스터밖에 엑스트라 덱에서 특수 소환할 수 없다.
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 특수 소환에 성공했을 경우, 자신 필드에 "키스킬" 몬스터가 존재하면, 필드의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 파괴한다. ②: 자신 필드에 "키스킬" 몬스터가 존재하지 않을 경우, 자신 / 상대의 메인 페이즈에 발동할 수 있다. 자신 묘지에서 "키스킬" 몬스터 1장을 고르고 특수 소환한다. 이 턴에, 자신은 악마족 몬스터밖에 엑스트라 덱에서 특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
     包括“璃拉”怪兽在内的怪兽2只
