--- a/data/cards/49032236.yaml
+++ b/data/cards/49032236.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>Ｎｏ．<rt>ナンバーズ</rt></ruby>８１ <ruby>超<rt>ちょう</rt></ruby><ruby>弩<rt>ど</rt></ruby><ruby>級<rt>きゅう</rt></ruby><ruby>砲<rt>ほう</rt></ruby><ruby>塔<rt>とう</rt></ruby><ruby>列<rt>れっ</rt></ruby><ruby>車<rt>しゃ</rt></ruby>スペリオル・ドーラ
   ja_romaji: Nanbāzu Hachijūichi Chōdokyū Hōtōressha Superioru Dōra
   ko: No.81 초노급포탑열차 슈페리어 도라
-  ko_rr: Neombeojeu Yeoldeunhana Chonogeup-potap-yeolcha Syuperi-eo Dora
+  ko_rr: Neombeojeu Palsip-i Chonogeup-potap-yeolcha Syuperi-eo Dora
   zh-TW:
   zh-CN: 编号81 超重型炮塔列车 优级多拉炮
 text:
@@ -37,7 +37,7 @@ text:
     ①：１ターンに１度、このカードのＸ素材を１つ取り除き、フィールドの表側表示モンスター１体を対象として発動できる。その表側表示モンスターはターン終了時まで、自身以外のカードの効果を受けない。この効果は相手ターンでも発動できる。
   ko: |-
     레벨 10 몬스터 × 2
-    ①: 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고, 필드의 앞면 표시 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 앞면 표시 몬스터는 턴 종료시까지, 그 몬스터 이외의 카드의 효과를 받지 않는다. 이 효과는 상대 턴에도 발동할 수 있다.
+    ①: 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고, 필드의 앞면 표시 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 앞면 표시 몬스터는 턴 종료시까지, 자신 이외의 카드의 효과를 받지 않는다. 이 효과는 상대 턴에도 발동할 수 있다.
   zh-TW:
   zh-CN: |-
     等级10怪兽×2
