--- a/data/cards/49121795.yaml
+++ b/data/cards/49121795.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>重<rt>じゅう</rt></ruby><ruby>装<rt>そう</rt></ruby><ruby>甲<rt>こう</rt></ruby><ruby>列<rt>れっ</rt></ruby><ruby>車<rt>しゃ</rt></ruby>アイアン・ヴォルフ
   ja_romaji: Jūsōkōressha Aian Vorufu
   ko: 중장갑열차 아이언 볼프
-  ko_rr:
+  ko_rr: Jungjanggap-yeolcha Ai-eon Bolpeu
   zh-TW:
   zh-CN: 重装甲列车铁狼
 text:
@@ -37,7 +37,7 @@ text:
     ①：１ターンに１度、このカードのＸ素材を１つ取り除き、自分フィールドの機械族モンスター１体を対象として発動できる。このターン、そのモンスター以外のモンスターは攻撃できず、そのモンスターは直接攻撃できる。②：このカードが相手によって破壊され墓地へ送られた場合に発動できる。デッキから機械族・レベル４モンスター１体を手札に加える。
   ko: |-
     기계족 레벨 4 몬스터 × 2
-    ①: 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고, 자신 필드의 기계족 몬스터 1장을 대상으로 하여 발동할 수 있다. 이 턴에, 자신은 그 몬스터로밖에 공격할 수 없으며, 그 몬스터는 직접 공격할 수 있다. ②: 이 카드가 상대에 의해 파괴되어 묘지로 보내졌을 경우에 발동할 수 있다. 덱에서 기계족 / 레벨 4 몬스터 1장을 패에 넣는다.
+    ①: 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고, 자신 필드의 기계족 몬스터 1장을 대상으로 하여 발동할 수 있다. 이 턴에, 그 몬스터 이외의 몬스터는 공격할 수 없으며, 그 몬스터는 직접 공격할 수 있다. ②: 이 카드가 상대에 의해 파괴되어 묘지로 보내졌을 경우에 발동할 수 있다. 덱에서 기계족 / 레벨 4 몬스터 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
     机械族等级4怪兽×2
