--- a/data/cards/60759087.yaml
+++ b/data/cards/60759087.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>Ｅｖｉｌ★Ｔｗｉｎ<rt>イビルツイン</rt></ruby> プレゼント
   ja_romaji: Ibiru Tsuin Purezento
   ko: <ruby>Evil★Twin<rt>이빌트윈</rt></ruby> 프레젠트
-  ko_rr:
+  ko_rr: Ibilteuwin Peurejenteu
   zh-TW:
   zh-CN: 邪恶★双子 馈赠
 text:
