--- a/data/cards/62098216.yaml
+++ b/data/cards/62098216.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>Ｅｖｉｌ★Ｔｗｉｎｓ<rt>イビルツインズ</rt></ruby> キスキル・リィラ
   ja_romaji: Ibiru Tsuinzu Kisukiru Ryira
   ko: <ruby>Evil★Twins<rt>이빌트윈스</rt></ruby> 키스킬 리일라
-  ko_rr:
+  ko_rr: Ibilteuwinjeu Kiseukil Riilla
   zh-TW:
   zh-CN: 邪恶★双子 姬丝吉尔・璃拉
 text:
