--- a/data/cards/75286621.yaml
+++ b/data/cards/75286621.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>召<rt>しょう</rt></ruby><ruby>喚<rt>かん</rt></ruby><ruby>獣<rt>じゅう</rt></ruby>メルカバー
   ja_romaji: Shōkanjū Merukabā
   ko: 소환수 메르카바
-  ko_rr:
+  ko_rr: Sohwansu Mereukaba
   zh-TW:
   zh-CN: 召唤兽 梅尔卡巴
 text:
