--- a/data/cards/85908279.yaml
+++ b/data/cards/85908279.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>召<rt>しょう</rt></ruby><ruby>喚<rt>かん</rt></ruby><ruby>獣<rt>じゅう</rt></ruby>コキュートス
   ja_romaji: Shōkanjū Kokyūtosu
   ko: 소환수 코키토스
-  ko_rr:
+  ko_rr: Sohwansu Kokitoseu
   zh-TW:
   zh-CN: 召唤兽 科库托斯
 text:
@@ -37,7 +37,7 @@ text:
     ①：フィールドのこのカードは相手の効果の対象にならず、相手の効果では破壊されない。②：このカードは表側守備表示のままで攻撃できる。その場合、攻撃力の数値を適用してダメージ計算を行う。
   ko: |-
     "소환사 알레이스터" ＋ 물 속성 몬스터
-    ①: 이 카드는 상대 효과의 대상이 되지 않으며, 상대 효과로는 파괴되지 않는다. ②: 이 카드는 앞면 수비 표시 그대로 공격할 수 있다. 그 경우, 공격력의 수치를 적용하고 데미지 계산을 실행한다.
+    ①: 필드의 이 카드는 상대 효과의 대상이 되지 않으며, 상대 효과로는 파괴되지 않는다. ②: 이 카드는 앞면 수비 표시 그대로 공격할 수 있다. 그 경우, 공격력의 수치를 적용하고 데미지 계산을 실행한다.
   zh-TW:
   zh-CN: |-
     「召唤师 阿莱斯特」＋水属性怪兽
