--- a/data/cards/98360333.yaml
+++ b/data/cards/98360333.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>Ｅｖｉｌ★Ｔｗｉｎ<rt>イビルツイン</rt></ruby> チャレンジ
   ja_romaji: Ibiru Tsuin Charenji
   ko: <ruby>Evil★Twin<rt>이빌트윈</rt></ruby> 챌린지
-  ko_rr:
+  ko_rr: Ibilteuwin Chaellinji
   zh-TW:
   zh-CN: 邪恶★双子 挑战
 text:
