--- a/data/rush/16711.yaml
+++ b/data/rush/16711.yaml
@@ -28,14 +28,14 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 Spell/Trap Card on your opponent's field. Then, if you destroyed a Spell/Trap Card by this effect, you can shuffle 1 Field Spell Card from your Graveyard into the Deck.
+    Destroy 1 Spell/Trap Card on your opponent's field. Then, you can shuffle 1 Field Spell Card from your Graveyard into the Deck.
   de:
   es:
   fr:
   it:
   pt:
   ja: |-
-    相手フィールドの魔法・罠カード１枚を選んで破壊する。この効果で魔法・罠カードを破壊した場合、さらに自分の墓地のフィールド魔法カード１枚を選んでデッキに戻す事ができる。
+    相手フィールドの魔法・罠カード１枚を選んで破壊する。その後、自分の墓地のフィールド魔法カード１枚を選んでデッキに戻す事ができる。
   ko: |-
     상대 필드의 마법 / 함정 카드 1장을 고르고 파괴한다. 이 효과로 마법 / 함정 카드를 파괴했을 경우, 추가로 자신 묘지의 필드 마법 카드 1장을 고르고 덱으로 되돌릴 수 있다.
   zh-TW:
@@ -44,7 +44,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: RageoftheWildBeasts-RDKP06-JP-R.png
+  image: RageoftheWildBeasts-RDLGP1-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP06-JP055
